align fix; theorem style; condition number

--- a/quarto/derivatives/first_second_derivatives.qmd
+++ b/quarto/derivatives/first_second_derivatives.qmd
@@ -36,16 +36,16 @@ Of course, we  define *negative* in a parallel manner. The intermediate value th
 
 Next,
 
+::: {.callout-note icon=false}
+## Strictly increasing
 
-> A function, $f$, is (strictly) **increasing** on an interval $I$ if for any $a < b$ it must be that $f(a) < f(b)$.
-
-
+A function, $f$, is (strictly) **increasing** on an interval $I$ if for any $a < b$ it must be that $f(a) < f(b)$.
 
 The word strictly is related to the inclusion of the $<$ precluding the possibility of a function being flat over an interval that the $\leq$ inequality would allow.
 
 
 A parallel definition with $a < b$ implying $f(a) > f(b)$ would be used for a *strictly decreasing* function.
-
+:::
 
 We can try and prove these properties for a function algebraically – we'll see both are related to the zeros of some function. However, before proceeding to that it is usually helpful to get an idea of where the answer is using exploratory graphs.
 
@@ -160,13 +160,17 @@ This leaves the question:
 This question can be answered by considering the first derivative.
 
 
-> *The first derivative test*: If $c$ is a critical point for $f(x)$ and *if* $f'(x)$ changes sign at $x=c$, then $f(c)$ will be either a relative maximum or a relative minimum.
->
->   * $f$ will have  a relative maximum at $c$ if the derivative changes sign from $+$ to $-$.
->   * $f$ will have  a relative minimum at $c$ if the derivative changes sign from $-$ to $+$.
->
->   Further,  If $f'(x)$ does *not* change sign at $c$, then $f$ will  *not* have a relative maximum or minimum at $c$.
+::: {.callout-note icon=false}
+## The first derivative test
 
+If $c$ is a critical point for $f(x)$ and *if* $f'(x)$ changes sign at $x=c$, then $f(c)$ will be either a relative maximum or a relative minimum.
+
+   * $f$ will have  a relative maximum at $c$ if the derivative changes sign from $+$ to $-$.
+   * $f$ will have  a relative minimum at $c$ if the derivative changes sign from $-$ to $+$.
+
+   Further,  If $f'(x)$ does *not* change sign at $c$, then $f$ will  *not* have a relative maximum or minimum at $c$.
+
+:::
 
 
 The classification part, should be clear: e.g., if the derivative is positive then negative, the function $f$ will increase to $(c,f(c))$ then decrease from $(c,f(c))$ – so $f$ will have a local maximum at $c$.
@@ -424,12 +428,15 @@ The graph attempts to illustrate that for this function the secant line between 
 
 This is a special property not shared by all functions. Let $I$ be an open interval.
 
+::: {.callout-note icon=false}
+## Concave up
 
-> **Concave up**: A function $f(x)$ is concave up on $I$ if for any $a < b$ in $I$, the secant line between $a$ and $b$ lies above the graph of $f(x)$ over $[a,b]$.
+A function $f(x)$ is concave up on $I$ if for any $a < b$ in $I$, the secant line between $a$ and $b$ lies above the graph of $f(x)$ over $[a,b]$.
 
+A similar definition exists for *concave down* where the secant lines lie below the graph.
+:::
 
-
-A similar definition exists for *concave down* where the secant lines lie below the graph.  Notationally, concave up says  for any $x$ in $[a,b]$:
+Notationally, concave up says  for any $x$ in $[a,b]$:
 
 
 $$
@@ -491,14 +498,16 @@ sign_chart(h'', 0, 8)
 
 Concave up functions are "opening" up, and often clearly $U$-shaped, though that is not necessary. At a relative minimum, where there is a $U$-shape, the graph will be concave up; conversely at a relative maximum, where the graph has a downward $\cap$-shape, the function will be concave down. This observation becomes:
 
+::: {.callout-note icon=false}
+## The second derivative test
 
-> The **second derivative test**: If $c$ is a critical point of $f(x)$ with $f''(c)$ existing in a neighborhood of $c$, then
->
->   * $f$ will have a relative maximum at the critical point $c$ if $f''(c) > 0$,
->   * $f$ will have a relative minimum at the critical point $c$ if $f''(c) < 0$, and
->   * *if* $f''(c) = 0$ the test is *inconclusive*.
+If $c$ is a critical point of $f(x)$ with $f''(c)$ existing in a neighborhood of $c$, then
 
+   * $f$ will have a relative maximum at the critical point $c$ if $f''(c) > 0$,
+   * $f$ will have a relative minimum at the critical point $c$ if $f''(c) < 0$, and
+   * *if* $f''(c) = 0$ the test is *inconclusive*.
 
+:::
 
 If $f''(c)$ is positive in an interval about $c$, then  $f''(c) > 0$ implies the function is concave up at $x=c$. In turn, concave up implies the derivative is increasing so must go from negative to positive at the critical point.
 
