--- a/quarto/derivatives/lhospitals_rule.qmd
+++ b/quarto/derivatives/lhospitals_rule.qmd
@@ -52,15 +52,18 @@ Wouldn't that be nice? We could find difficult limits just by differentiating th
 
 Well, in fact that is more or less true, a fact that dates back to [L'Hospital](http://en.wikipedia.org/wiki/L%27H%C3%B4pital%27s_rule) - who wrote the first textbook on differential calculus - though this result is likely due to one of the Bernoulli brothers.
 
+::: {.callout-note icon=false}
+## L'Hospital's rule
 
-> *L'Hospital's rule*: Suppose:
->
->   * that $\lim_{x\rightarrow c+} f(c) =0$ and $\lim_{x\rightarrow c+} g(c) =0$,
->   * that $f$ and $g$ are differentiable in $(c,b)$, and
->   * that $g(x)$ exists and is non-zero for *all* $x$ in $(c,b)$,
->
-> then **if** the following limit exists: $\lim_{x\rightarrow c+}f'(x)/g'(x)=L$ it follows that $\lim_{x \rightarrow c+}f(x)/g(x) = L$.
+Suppose:
 
+  * that $\lim_{x\rightarrow c+} f(c) =0$ and $\lim_{x\rightarrow c+} g(c) =0$,
+  * that $f$ and $g$ are differentiable in $(c,b)$, and
+  * that $g(x)$ exists and is non-zero for *all* $x$ in $(c,b)$,
+
+then **if** the following limit exists: $\lim_{x\rightarrow c+}f'(x)/g'(x)=L$ it follows that $\lim_{x \rightarrow c+}f(x)/g(x) = L$.
+
+:::
 
 
 That is *if* the right limit of $f(x)/g(x)$ is indeterminate of the form $0/0$, but the right limit of $f'(x)/g'(x)$ is known, possibly by simple continuity, then the right limit of $f(x)/g(x)$ exists and is equal to that of $f'(x)/g'(x)$.
@@ -308,23 +311,25 @@ L'Hospital's rule generalizes to other indeterminate forms, in particular the in
 The value $c$ in the limit can also be infinite. Consider this case with $c=\infty$:
 
 
-
+$$
 \begin{align*}
 \lim_{x \rightarrow \infty} \frac{f(x)}{g(x)} &=
 \lim_{x \rightarrow 0} \frac{f(1/x)}{g(1/x)}
 \end{align*}
+$$
 
 
 L'Hospital's limit applies as $x \rightarrow 0$, so we differentiate to get:
 
 
-
+$$
 \begin{align*}
 \lim_{x \rightarrow 0} \frac{[f(1/x)]'}{[g(1/x)]'}
 &= \lim_{x \rightarrow 0} \frac{f'(1/x)\cdot(-1/x^2)}{g'(1/x)\cdot(-1/x^2)}\\
 &= \lim_{x \rightarrow 0} \frac{f'(1/x)}{g'(1/x)}\\
 &= \lim_{x \rightarrow \infty} \frac{f'(x)}{g'(x)},
 \end{align*}
+$$
 
 
 *assuming* the latter limit exists, L'Hospital's rule assures the equality
@@ -415,11 +420,12 @@ Be just saw that $\lim_{x \rightarrow 0+}\log(x)/(1/x) = 0$. So by the rules for
 A limit $\lim_{x \rightarrow c} f(x) - g(x)$ of indeterminate form $\infty - \infty$ can be reexpressed to be of the from $0/0$ through the transformation:
 
 
-
+$$
 \begin{align*}
 f(x) - g(x) &= f(x)g(x) \cdot (\frac{1}{g(x)} - \frac{1}{f(x)}) \\
 &= \frac{\frac{1}{g(x)} - \frac{1}{f(x)}}{\frac{1}{f(x)g(x)}}.
 \end{align*}
+$$
 
 
 Applying this to
@@ -438,7 +444,7 @@ $$
 \lim_{x \rightarrow 1} \frac{x\log(x)-(x-1)}{(x-1)\log(x)}
 $$
 
-In `SymPy` we have (using italic variable names to avoid a problem with the earlier use of `f` as a function):
+In `SymPy` we have:
 
 
 ```{julia}
