--- a/quarto/derivatives/mean_value_theorem.qmd
+++ b/quarto/derivatives/mean_value_theorem.qmd
@@ -92,9 +92,12 @@ Lest you think that continuous functions always have derivatives except perhaps 
 We have defined an *absolute maximum* of $f(x)$ over an interval to be a value $f(c)$ for a point $c$ in the interval that is as large as any other value in the interval. Just specifying a function and an interval does not guarantee an absolute maximum, but specifying a *continuous* function and a *closed* interval does, by the extreme value theorem.
 
 
-> *A relative maximum*: We say $f(x)$ has a *relative maximum* at $c$ if there exists *some* interval $I=(a,b)$ with $a < c < b$ for which $f(c)$ is an absolute maximum for $f$ and $I$.
+::: {.callout-note icon=false}
+## A relative maximum
 
+We say $f(x)$ has a *relative maximum* at $c$ if there exists *some* interval $I=(a,b)$ with $a < c < b$ for which $f(c)$ is an absolute maximum for $f$ and $I$.
 
+:::
 
 The difference is a bit subtle, for an absolute maximum the interval must also be specified, for a relative maximum there just needs to exist some interval, possibly really small, though it must be bigger than a point.
 
@@ -139,12 +142,16 @@ For a continuous function $f(x)$, call a point $c$ in the domain of $f$ where ei
 
 We can combine Bolzano's extreme value theorem with Fermat's insight to get the following:
 
+::: {.callout-note icon=false}
+## Absolute maxima characterization
 
-> A continuous function on $[a,b]$ has an absolute maximum that occurs at a critical point $c$, $a < c < b$, or an endpoint, $a$ or $b$.
+A continuous function on $[a,b]$ has an absolute maximum that occurs at a critical point $c$, $a < c < b$, or an endpoint, $a$ or $b$.
+
+A similar statement holds for an absolute minimum.
+:::
 
 
-
-A similar statement holds for an absolute minimum.  This gives a restricted set of places to look for absolute maximum and minimum values - all the critical points and the endpoints.
+The above gives a restricted set of places to look for absolute maximum and minimum values - all the critical points and the endpoints.
 
 
 It is also the case that all relative extrema occur at a critical point, *however* not all critical points correspond to relative extrema. We will see *derivative tests* that help characterize when that occurs.
@@ -263,10 +270,12 @@ Here the maximum occurs at an endpoint. The critical point $c=0.67\dots$ does no
 
 Let $f(x)$ be differentiable on $(a,b)$ and continuous on $[a,b]$. Then the absolute maximum occurs at an endpoint or where the derivative is $0$ (as the derivative is always defined). This gives rise to:
 
+::: {.callout-note icon=false}
+## [Rolle's](http://en.wikipedia.org/wiki/Rolle%27s_theorem) theorem
 
-> *[Rolle's](http://en.wikipedia.org/wiki/Rolle%27s_theorem) theorem*: For $f$ differentiable on $(a,b)$ and continuous on $[a,b]$, if $f(a)=f(b)$, then there exists some $c$ in $(a,b)$ with $f'(c) = 0$.
+For $f$ differentiable on $(a,b)$ and continuous on $[a,b]$, if $f(a)=f(b)$, then there exists some $c$ in $(a,b)$ with $f'(c) = 0$.
 
-
+:::
 
 This modest observation opens the door to many relationships between a function and its derivative, as it ties the two together in one statement.
 
@@ -311,10 +320,12 @@ We are driving south and in one hour cover 70 miles. If the speed limit is 65 mi
 
 The mean value theorem is a direct generalization of Rolle's theorem.
 
+::: {.callout-note icon=false}
+## Mean value theorem
 
-> *Mean value theorem*: Let $f(x)$ be differentiable on $(a,b)$ and continuous on $[a,b]$. Then there exists a value $c$ in $(a,b)$ where $f'(c) = (f(b) - f(a)) / (b - a)$.
+Let $f(x)$ be differentiable on $(a,b)$ and continuous on $[a,b]$. Then there exists a value $c$ in $(a,b)$ where $f'(c) = (f(b) - f(a)) / (b - a)$.
 
-
+:::
 
 This says for any secant line between $a < b$ there will be a parallel tangent line at some $c$ with $a < c < b$ (all provided $f$ is differentiable on $(a,b)$ and continuous on $[a,b]$).
 
@@ -425,12 +436,19 @@ Suppose it is known that $f'(x)=0$ on some interval $I$ and we take any $a < b$ 
 ### The Cauchy mean value theorem
 
 
-[Cauchy](http://en.wikipedia.org/wiki/Mean_value_theorem#Cauchy.27s_mean_value_theorem) offered an extension to the mean value theorem above. Suppose both $f$ and $g$ satisfy the conditions of the mean value theorem on $[a,b]$ with $g(b)-g(a) \neq 0$, then there exists at least one $c$ with $a < c < b$ such that
+[Cauchy](http://en.wikipedia.org/wiki/Mean_value_theorem#Cauchy.27s_mean_value_theorem) offered an extension to the mean value theorem above.
+
+::: {.callout-note icon=false}
+## Cauchy mean value theorem
+
+Suppose both $f$ and $g$ satisfy the conditions of the mean value theorem on $[a,b]$ with $g(b)-g(a) \neq 0$, then there exists at least one $c$ with $a < c < b$ such that
 
 
 $$
 f'(c)  = g'(c) \cdot \frac{f(b) - f(a)}{g(b) - g(a)}.
 $$
+
+:::
 
 The proof follows by considering $h(x) = f(x) - r\cdot g(x)$, with $r$ chosen so that $h(a)=h(b)$. Then Rolle's theorem applies so that there is a $c$ with $h'(c)=0$, so $f'(c) = r g'(c)$, but $r$ can be seen to be $(f(b)-f(a))/(g(b)-g(a))$, which proves the theorem.
 
