--- a/quarto/integral_vector_calculus/div_grad_curl.qmd
+++ b/quarto/integral_vector_calculus/div_grad_curl.qmd
@@ -105,7 +105,7 @@ annotate!([
         (.5, -.1, "Δy"),
         (1+.75dx, .1, "Δx"),
         (1+dx+.1, .75, "Δz"),
-        (.5,.15,L"(x,y,z)"),
+        (.5,.15,"(x,y,z)"),
         (.45,.6, "î"),
         (1+.8dx, .7, "ĵ"),
         (.8, 1+dy+.1, "k̂")
@@ -204,20 +204,20 @@ arrow!([1/2, 1-dx], .01 *[-1,0], linewidth=3, color=:blue)
 arrow!([1-dx, 1/2], .01 *[0, 1], linewidth=3, color=:blue)
 
 annotate!([
-        (0,-1/16,L"(x,y)"),
-        (1, -1/16, L"(x+\Delta{x},y)"),
-        (0, 1+1/16, L"(x,y+\Delta{y})"),
-        (1/2, 4dx, L"\hat{i}"),
-        (1/2, 1-4dx, L"-\hat{i}"),
-        (3dx, 1/2, L"-\hat{j}"),
-        (1-3dx, 1/2, L"\hat{j}")
+        (0,-1/16,"(x,y)"),
+        (1, -1/16, "(x+Δx,y)"),
+        (0, 1+1/16, "(x,y+Δy)"),
+        (1/2, 4dx, "î}"),
+        (1/2, 1-4dx, "-î"),
+        (3dx, 1/2, "-ĵ"),
+        (1-3dx, 1/2, "ĵ")
         ])
 ```
 
 Let $F=\langle F_x, F_y\rangle$. For small enough values of $\Delta{x}$ and $\Delta{y}$ the line integral, $\oint_C F\cdot d\vec{r}$ can be *approximated* by $4$ terms:
 
 
-
+$$
 \begin{align*}
 \left(F(x,y) \cdot \hat{i}\right)\Delta{x} &+
 \left(F(x+\Delta{x},y) \cdot \hat{j}\right)\Delta{y} +
@@ -230,6 +230,7 @@ F_x(x, y+\Delta{y}) (-\Delta{x}) + F_y(x,y) (-\Delta{y})\\
 (F_y(x + \Delta{x}, y) - F_y(x, y))\Delta{y} -
 (F_x(x, y+\Delta{y})-F_x(x,y))\Delta{x}.
 \end{align*}
+$$
 
 
 The Riemann approximation allows a choice of evaluation point for Riemann integrable functions, and the choice here lends itself to further analysis. Were the above divided by $\Delta{x}\Delta{y}$, the area of the box, and a limit taken, partial derivatives appear to suggest this formula:
@@ -275,7 +276,7 @@ annotate!([
         (.5, -.1, "Δy"),
         (1+.75dx, .1, "Δx"),
         (1+dx+.1, .75, "Δz"),
-        (.5,.15,L"(x,y,z)"),
+        (.5,.15,"(x,y,z)"),
         (.45,.6, "î"),
         (1+.8dx, .667, "ĵ"),
         (.8, 1+dy+.067, "k̂"),
@@ -309,10 +310,10 @@ annotate!([
 
         (.9, 1+dx, "C₁"),
 
-        (2*dx, 1/2, L"\hat{T}=\hat{i}"),
-        (1+2*dx,1/2, L"\hat{T}=-\hat{i}"),
-        (1/2,-3/2*dx, L"\hat{T}=\hat{j}"),
-        (1/2, 1+(3/2)*dx, L"\hat{T}=-\hat{j}"),
+        (2*dx, 1/2, "T̂=î"),
+        (1+2*dx,1/2, "T̂=-î"),
+        (1/2,-3/2*dx, "T̂= ĵ"),
+        (1/2, 1+(3/2)*dx, "T̂=-ĵ"),
 
         (3dx,1-2dx, "(x,y,z+Δz)"),
         (4dx,2dx, "(x+Δx,y,z+Δz)"),
@@ -326,18 +327,19 @@ p
 Now we compute the *line integral*. Consider the top face, $S_1$, connecting $(x,y,z+\Delta z), (x + \Delta x, y, z + \Delta z),  (x + \Delta x, y + \Delta y, z + \Delta z),  (x, y + \Delta y, z + \Delta z)$, Using the *right hand rule*, parameterize the boundary curve, $C_1$, in a counter clockwise direction so the right hand rule yields the outward pointing normal ($\hat{k}$). Then the integral $\oint_{C_1} F\cdot \hat{T} ds$ is *approximated* by the following Riemann sum of $4$ terms:
 
 
-
+$$
 \begin{align*}
 F(x,y, z+\Delta{z}) \cdot \hat{i}\Delta{x}  &+ F(x+\Delta x, y, z+\Delta{z}) \cdot \hat{j}  \Delta y \\
 &+ F(x, y+\Delta y, z+\Delta{z}) \cdot (-\hat{i}) \Delta{x}  \\
 &+ F(x, y, z+\Delta{z}) \cdot (-\hat{j}) \Delta{y}.
 \end{align*}
+$$
 
 
 (The points $c_i$ are chosen from the endpoints of the line segments.)
 
 
-
+$$
 \begin{align*}
 \oint_{C_1} F\cdot \hat{T} ds
 &\approx  (F_y(x+\Delta x, y, z+\Delta{z})   \\
@@ -345,17 +347,19 @@ F(x,y, z+\Delta{z}) \cdot \hat{i}\Delta{x}  &+ F(x+\Delta x, y, z+\Delta{z}) \cd
 &-  (F_x(x,y + \Delta{y}, z+\Delta{z})  \\
 &- F_x(x, y, z+\Delta{z})) \Delta{x}
 \end{align*}
+$$
 
 
 As before, were this divided by the *area* of the surface, we have after rearranging and cancellation:
 
 
-
+$$
 \begin{align*}
 \frac{1}{\Delta{S_1}} \oint_{C_1} F \cdot \hat{T} ds &\approx
 \frac{F_y(x+\Delta x, y, z+\Delta{z}) - F_y(x, y, z+\Delta{z})}{\Delta{x}}\\
 &- \frac{F_x(x, y+\Delta y, z+\Delta{z}) - F_x(x, y, z+\Delta{z})}{\Delta{y}}.
 \end{align*}
+$$
 
 
 In the limit, as  $\Delta{S} \rightarrow 0$, this will converge to $\partial{F_y}/\partial{x}-\partial{F_x}/\partial{y}$.
@@ -367,7 +371,7 @@ Had the bottom of the box been used, a similar result would be found, up to a mi
 Unlike the two dimensional case, there are other directions to consider and here the other sides will yield different answers. Consider now the face connecting $(x,y,z), (x+\Delta{x}, y, z), (x+\Delta{x}, y, z + \Delta{z})$, and $(x,y,z +\Delta{z})$ with outward pointing normal $-\hat{j}$. Let $S_2$ denote this face and $C_2$ describe its boundary. Orient this curve so that the right hand rule points in the $-\hat{j}$ direction (the outward pointing normal). Then, as before, we can approximate:
 
 
-
+$$
 \begin{align*}
 \oint_{C_2} F \cdot \hat{T} ds
 &\approx
@@ -378,6 +382,7 @@ F(x,y,z) \cdot \hat{i} \Delta{x} \\
 &= (F_z(x+\Delta{x},y,z) - F_z(x, y, z))\Delta{z} -
 (F_x(x,y,z+\Delta{z}) - F(x,y,z)) \Delta{x}.
 \end{align*}
+$$
 
 
 Dividing by $\Delta{S}=\Delta{x}\Delta{z}$ and taking a limit will give:
@@ -401,16 +406,18 @@ $$
 
 In short, depending on the face chosen, a different answer is given, but all have the same type.
 
+::: {.callout-note icon=false}
+## The curl
 
-> Define the *curl* of a $3$-dimensional vector field $F=\langle F_x,F_y,F_z\rangle$ by:
->
-> $$
-> \text{curl}(F) =
-> \langle \frac{\partial{F_z}}{\partial{y}} - \frac{\partial{F_y}}{\partial{z}},
-> \frac{\partial{F_x}}{\partial{z}} - \frac{\partial{F_z}}{\partial{x}},
-> \frac{\partial{F_y}}{\partial{x}} - \frac{\partial{F_x}}{\partial{y}} \rangle.
-> $$
+Define the *curl* of a $3$-dimensional vector field $F=\langle F_x,F_y,F_z\rangle$ by:
 
+$$
+\text{curl}(F) =
+\langle \frac{\partial{F_z}}{\partial{y}} - \frac{\partial{F_y}}{\partial{z}},
+\frac{\partial{F_x}}{\partial{z}} - \frac{\partial{F_z}}{\partial{x}},
+\frac{\partial{F_y}}{\partial{x}} - \frac{\partial{F_x}}{\partial{y}} \rangle.
+$$
+:::
 
 
 If $S$ is some surface with closed boundary $C$ oriented so that the unit normal, $\hat{N}$, of $S$ is given by the right hand rule about $C$, then
@@ -474,7 +481,7 @@ The divergence, gradient, and curl all involve partial derivatives. There is a n
 This is a *vector differential operator* that acts on functions and vector fields through the typical notation to yield the three operations:
 
 
-
+$$
 \begin{align*}
 \nabla{f} &= \langle
 \frac{\partial{f}}{\partial{x}},
@@ -512,6 +519,7 @@ F_x & F_y & F_z
 \end{bmatrix}
 ,\quad\text{the curl}.
 \end{align*}
+$$
 
 
 :::{.callout-note}
@@ -842,12 +850,13 @@ Let $f$ and $g$ denote scalar functions, $R^3 \rightarrow R$ and $F$ and $G$ be 
 As with the sum rule of univariate derivatives, these operations satisfy:
 
 
-
+$$
 \begin{align*}
 \nabla(f + g) &= \nabla{f} + \nabla{g}\\
 \nabla\cdot(F+G) &= \nabla\cdot{F} + \nabla\cdot{G}\\
 \nabla\times(F+G) &= \nabla\times{F} + \nabla\times{G}.
 \end{align*}
+$$
 
 
 ### Product rule
@@ -856,12 +865,13 @@ As with the sum rule of univariate derivatives, these operations satisfy:
 The product rule $(uv)' = u'v + uv'$ has related formulas:
 
 
-
+$$
 \begin{align*}
 \nabla{(fg)} &= (\nabla{f}) g + f\nabla{g} = g\nabla{f}  + f\nabla{g}\\
 \nabla\cdot{fF} &= (\nabla{f})\cdot{F} +  f(\nabla\cdot{F})\\
 \nabla\times{fF} &= (\nabla{f})\times{F} +  f(\nabla\times{F}).
 \end{align*}
+$$
 
 
 ### Rules over cross products
@@ -870,12 +880,13 @@ The product rule $(uv)' = u'v + uv'$ has related formulas:
 The cross product of two vector fields is a vector field for which the divergence and curl may be taken. There are formulas to relate to the individual terms:
 
 
-
+$$
 \begin{align*}
 \nabla\cdot(F \times G) &= (\nabla\times{F})\cdot G - F \cdot (\nabla\times{G})\\
 \nabla\times(F \times G) &= F(\nabla\cdot{G}) - G(\nabla\cdot{F}) + (G\cdot\nabla)F-(F\cdot\nabla)G\\
 &= \nabla\cdot(BA^t - AB^t).
 \end{align*}
+$$
 
 
 The curl formula is more involved.
@@ -921,7 +932,7 @@ Second,
 This is not as clear, but can be seen algebraically as terms cancel. First:
 
 
-
+$$
 \begin{align*}
 \nabla\cdot(\nabla\times{F}) &=
 \langle
@@ -938,6 +949,7 @@ This is not as clear, but can be seen algebraically as terms cancel. First:
 \left(\frac{\partial^2{F_x}}{\partial{z}\partial{y}} - \frac{\partial^2{F_z}}{\partial{x}\partial{y}}\right) +
 \left(\frac{\partial^2{F_y}}{\partial{x}\partial{z}} - \frac{\partial^2{F_x}}{\partial{y}\partial{z}}\right)
 \end{align*}
+$$
 
 
 Focusing on one component function, $F_z$ say, we see this contribution:
@@ -974,10 +986,10 @@ apoly!(ps,  linewidth=3, color=:red)
 
 ps = [[1,0],[1+dx, dy],[1+dx, 1+dy],[1,1]]
 apoly!(ps,  linewidth=3, color=:green)
-annotate!(dx+.02, dy-0.05, L"P_1")
-annotate!(0+0.05, 0 - 0.02, L"P_2")
-annotate!(1+0.05, 0 - 0.02, L"P_3")
-annotate!(1+dx+.02, dy-0.05, L"P_4")
+annotate!(dx+.02, dy-0.05, "P₁")
+annotate!(0+0.05, 0 - 0.02, "P₂")
+annotate!(1+0.05, 0 - 0.02, "P₃")
+annotate!(1+dx+.02, dy-0.05, "P₄")
 p
 ```
 
@@ -1014,7 +1026,7 @@ This is because of how the line integrals are oriented so that the right-hand ru
 The [invariance of charge](https://en.wikipedia.org/wiki/Maxwell%27s_equations#Charge_conservation) can be derived as a corollary of Maxwell's equation. The divergence of the curl of the magnetic field is $0$, leading to:
 
 
-
+$$
 \begin{align*}
 0 &= \nabla\cdot(\nabla\times{B}) \\
 &=
@@ -1024,6 +1036,7 @@ The [invariance of charge](https://en.wikipedia.org/wiki/Maxwell%27s_equations#C
 &=
 \mu_0(\nabla\cdot{J} + \frac{\partial{\rho}}{\partial{t}}).
 \end{align*}
+$$
 
 
 That is $\nabla\cdot{J} = -\partial{\rho}/\partial{t}$. This says any change in the charge density in time ($\partial{\rho}/\partial{t}$) is balanced off by a divergence in the electric current density ($\nabla\cdot{J}$). That is, charge can't be created or destroyed in an isolated system.
@@ -1048,7 +1061,7 @@ $$
 Without explaining why, these values can be computed using volume and surface integrals:
 
 
-
+$$
 \begin{align*}
 \phi(\vec{r}') &=
 \frac{1}{4\pi} \int_V \frac{\nabla \cdot F(\vec{r})}{\|\vec{r}'-\vec{r} \|} dV -
@@ -1056,16 +1069,18 @@ Without explaining why, these values can be computed using volume and surface in
 A(\vec{r}') &= \frac{1}{4\pi} \int_V \frac{\nabla \times F(\vec{r})}{\|\vec{r}'-\vec{r} \|} dV +
 \frac{1}{4\pi} \oint_S \frac{F(\vec{r})}{\|\vec{r}'-\vec{r} \|} \times \hat{N} dS.
 \end{align*}
+$$
 
 
 If $V = R^3$, an unbounded domain, *but* $F$ *vanishes* faster than $1/r$, then the theorem still holds with just the volume integrals:
 
 
-
+$$
 \begin{align*}
 \phi(\vec{r}') &=\frac{1}{4\pi} \int_V \frac{\nabla \cdot F(\vec{r})}{\|\vec{r}'-\vec{r} \|} dV\\
 A(\vec{r}') &= \frac{1}{4\pi} \int_V \frac{\nabla \times F(\vec{r})}{\|\vec{r}'-\vec{r}\|} dV.
 \end{align*}
+$$
 
 
 ## Change of variable
@@ -1080,7 +1095,7 @@ Some details are [here](https://en.wikipedia.org/wiki/Curvilinear_coordinates), 
 We restrict to $n=3$ and use $(x,y,z)$ for Cartesian coordinates and $(u,v,w)$ for an *orthogonal* curvilinear coordinate system, such as spherical or cylindrical. If $\vec{r} = \langle x,y,z\rangle$, then
 
 
-
+$$
 \begin{align*}
 d\vec{r} &= \langle dx,dy,dz \rangle = J \langle du,dv,dw\rangle\\
 &=
@@ -1091,6 +1106,7 @@ d\vec{r} &= \langle dx,dy,dz \rangle = J \langle du,dv,dw\rangle\\
 \frac{\partial{\vec{r}}}{\partial{v}} dv +
 \frac{\partial{\vec{r}}}{\partial{w}} dw.
 \end{align*}
+$$
 
 
 The term ${\partial{\vec{r}}}/{\partial{u}}$ is tangent to the curve formed by *assuming* $v$ and $w$ are constant and letting $u$ vary. Similarly for the other partial derivatives. Orthogonality assumes that at every point, these tangent vectors are orthogonal.
@@ -1138,7 +1154,7 @@ This uses orthogonality, so $\hat{e}_v \times \hat{e}_w$ is parallel to $\hat{e}
 The volume element is found by *projecting* $d\vec{r}$ onto the $\hat{e}_u$, $\hat{e}_v$, $\hat{e}_w$ coordinate system through $(d\vec{r} \cdot\hat{e}_u) \hat{e}_u$, $(d\vec{r} \cdot\hat{e}_v) \hat{e}_v$, and $(d\vec{r} \cdot\hat{e}_w) \hat{e}_w$. Then forming the triple scalar product to compute the volume of the parallelepiped:
 
 
-
+$$
 \begin{align*}
 \left[(d\vec{r} \cdot\hat{e}_u) \hat{e}_u\right] \cdot
 \left(
@@ -1149,6 +1165,7 @@ The volume element is found by *projecting* $d\vec{r}$ onto the $\hat{e}_u$, $\h
 &=
 h_u h_v h_w  du dv dw,
 \end{align*}
+$$
 
 
 as the unit vectors are orthonormal, their triple scalar product is $1$ and $d\vec{r}\cdot\hat{e}_u = h_u du$, etc.
@@ -1214,7 +1231,7 @@ p
 The tangent vectors found from the partial derivatives of $\vec{r}$:
 
 
-
+$$
 \begin{align*}
 \frac{\partial{\vec{r}}}{\partial{r}} &=
 \langle \cos(\theta) \cdot \sin(\phi), \sin(\theta) \cdot \sin(\phi), \cos(\phi)\rangle,\\
@@ -1223,12 +1240,13 @@ The tangent vectors found from the partial derivatives of $\vec{r}$:
 \frac{\partial{\vec{r}}}{\partial{\phi}} &=
 \langle r\cdot\cos(\theta)\cdot\cos(\phi), r\cdot\sin(\theta)\cdot\cos(\phi), -r\cdot\sin(\phi) \rangle.
 \end{align*}
+$$
 
 
 With this, we have $h_r=1$, $h_\theta=r\sin(\phi)$, and $h_\phi = r$. So that
 
 
-
+$$
 \begin{align*}
 dl &= \sqrt{dr^2 + (r\sin(\phi)d\theta)^2 + (rd\phi)^2},\\
 dS_r &= r^2\sin(\phi)d\theta d\phi,\\
@@ -1236,6 +1254,7 @@ dS_\theta &= rdr d\phi,\\
 dS_\phi &= r\sin(\phi)dr d\theta, \quad\text{and}\\
 dV &= r^2\sin(\phi) drd\theta d\phi.
 \end{align*}
+$$
 
 
 The following visualizes the volume and the surface elements.
@@ -1292,7 +1311,7 @@ p
 If $f$ is a scalar function then $df = \nabla{f} \cdot d\vec{r}$ by the chain rule. Using the curvilinear coordinates:
 
 
-
+$$
 \begin{align*}
 df &=
 \frac{\partial{f}}{\partial{u}} du +
@@ -1303,6 +1322,7 @@ df &=
 \frac{1}{h_v}\frac{\partial{f}}{\partial{v}} h_vdv +
 \frac{1}{h_w}\frac{\partial{f}}{\partial{w}} h_wdw.
 \end{align*}
+$$
 
 
 But, as was used above, $d\vec{r} \cdot \hat{e}_u = h_u du$, etc. so $df$ can be re-expressed as:
