--- a/quarto/integral_vector_calculus/double_triple_integrals.qmd
+++ b/quarto/integral_vector_calculus/double_triple_integrals.qmd
@@ -391,17 +391,19 @@ By "iterated" we mean performing two different definite integrals. For example, 
 
 The question then: under what conditions will the three integrals be equal?
 
+::: {.callout-note icon=false}
+## [Fubini](https://math.okstate.edu/people/lebl/osu4153-s16/chapter10-ver1.pdf)
 
-> [Fubini](https://math.okstate.edu/people/lebl/osu4153-s16/chapter10-ver1.pdf). Let $R \times S$ be a closed rectangular region in $R^n \times R^m$. Suppose $f$ is bounded. Define $f_x(y) = f(x,y)$ and $f^y(x) = f(x,y)$ where $x$ is in $R^n$ and $y$ in $R^m$.  *If* $f_x$ and $f^y$ are integrable then
->
-> $$
-> \iint_{R\times S}fdV = \iint_R \left(\iint_S f_x(y) dy\right) dx
-> = \iint_S \left(\iint_R f^y(x) dx\right) dy.
-> $$
+Let $R \times S$ be a closed rectangular region in $R^n \times R^m$. Suppose $f$ is bounded. Define $f_x(y) = f(x,y)$ and $f^y(x) = f(x,y)$ where $x$ is in $R^n$ and $y$ in $R^m$.  *If* $f_x$ and $f^y$ are integrable then
 
-
+$$
+\iint_{R\times S}fdV = \iint_R \left(\iint_S f_x(y) dy\right) dx
+= \iint_S \left(\iint_R f^y(x) dx\right) dy.
+$$
 
 Similarly, if $f^y$ is integrable for all $y$, then $\iint_{R\times S}fdV =\iint_S \iint_R f(x,y) dx dy$.
+:::
+
 
 
 An immediate corollary is that the above holds for continuous functions when $R$ and $S$ are bounded, the case described here.
@@ -939,11 +941,12 @@ In [Katz](http://www.jstor.org/stable/2689856) a review of the history of "chang
 We view $R$ in two coordinate systems $(x,y)$ and $(u,v)$. We have that
 
 
-
+$$
 \begin{align*}
 dx &= A du + B dv\\
 dy &= C du + D dv,
 \end{align*}
+$$
 
 
 where $A = \partial{x}/\partial{u}$, $B = \partial{x}/\partial{v}$, $C= \partial{y}/\partial{u}$, and $D = \partial{y}/\partial{v}$. Lagrange, following Euler, first sets $x$ to be constant (as is done in iterated integration). Hence, $dx = 0$ and so $du = -(B/A) dv$ and, after substitution,  $dy = (D-C(B/A))dv$. Then Lagrange set $y$ to be a constant, so $dy = 0$ and hence $dv=0$ so $dx = Adu$. The area "element" $dx dy = A du \cdot (D - C(B/A)) dv = (AD - BC) du dv$. Since areas and volumes are non-negative, the absolute value is used. With this, we have "$dxdy = |AD-BC|du dv$" as the analog of $dx = g'(u) du$.
@@ -952,11 +955,12 @@ where $A = \partial{x}/\partial{u}$, $B = \partial{x}/\partial{v}$, $C= \partial
 The expression $AD - BC$ was also derived by Euler, by related means. Lagrange extended the analysis to 3 dimensions. Before doing so, it is helpful to understand the problem from a geometric perspective. Euler was attempting to understand the effects of the following change of variable:
 
 
-
+$$
 \begin{align*}
 x &= a + mt + \sqrt{1-m^2} v\\
 y & = b + \sqrt{1-m^2}t -mv
 \end{align*}
+$$
 
 Euler knew this to be a clockwise *rotation* by an angle $\theta$ with $\cos(\theta) = m$,  a *reflection* through the $x$ axis, and a translation by $\langle a, b\rangle$. All these *should* preserve the area represented by $dx dy$, so he was *expecting* $dx dy = dt dv$.
 
@@ -1090,13 +1094,15 @@ Using the fact that the two vectors involved are columns in the Jacobian of the 
 
 The absolute value of the determinant of the Jacobian is the multiplying factor that is seen in the change of variable formula for all dimensions:
 
+::: {.callout-note icon=false}
+## [Change of variable](https://en.wikipedia.org/wiki/Integration_by_substitution#Substitution_for_multiple_variables)
 
-> [Change of variable](https://en.wikipedia.org/wiki/Integration_by_substitution#Substitution_for_multiple_variables) Let $U$ be an open set in $R^n$, $G:U \rightarrow R^n$ be an *injective* differentiable function with *continuous* partial derivatives. If $f$ is continuous and compactly supported, then
->
-> $$
-> \iint_{G(S)} f(\vec{x}) dV = \iint_S (f \circ G)(\vec{u}) |\det(J_G)(\vec{u})| dU.
-> $$
+Let $U$ be an open set in $R^n$, $G:U \rightarrow R^n$ be an *injective* differentiable function with *continuous* partial derivatives. If $f$ is continuous and compactly supported, then
 
+$$
+\iint_{G(S)} f(\vec{x}) dV = \iint_S (f \circ G)(\vec{u}) |\det(J_G)(\vec{u})| dU.
+$$
+:::
 
 
 For the one-dimensional case, there is no absolute value, but there the interval is reversed, producing "negative" area. This is not the case here, where $S$ is parameterized to give positive volume.
@@ -1308,12 +1314,13 @@ What about other triangles, say the triangle bounded by $x=0$, $y=0$ and $y-x=1$
 This can be seen as a reflection through the line $x=1/2$ of the triangle above. If $G_1$ represents the mapping from $U [0,1]\times[0,1]$ into the triangle of the last problem, and $G_2$ represents the reflection through the line $x=1/2$, then the transformation $G_2 \circ G_1$ will map the box $U$ into the desired region. By the chain rule, we have:
 
 
-
+$$
 \begin{align*}
 \int_{(G_2\circ G_1)(U)} f dx &= \int_U (f\circ G_2 \circ G_1) |\det(J_{G_2 \circ G_1})| du \\
 &=
 \int_U (f\circ G_2 \circ G_1) |\det(J_{G_2}(G_1(u)))||\det(J_{G_1}(u))| du.
 \end{align*}
+$$
 
 
 (In  [Katz](http://www.jstor.org/stable/2689856) it is mentioned that Jacobi showed this in 1841.)
