--- a/quarto/integral_vector_calculus/line_integrals.qmd
+++ b/quarto/integral_vector_calculus/line_integrals.qmd
@@ -166,13 +166,14 @@ However, it proves more interesting to define an integral incorporating how prop
 
 The canonical example is [work](https://en.wikipedia.org/wiki/Work_(physics)), which is a measure of a force times a distance. For an object following a path, the work done is still a force times a distance, but only that force in the direction of the motion is considered. (The *constraint force* keeping the object on the path does no work.) Mathematically, $\hat{T}$ describes the direction of motion along a path, so the work done in moving an object over a small segment of the path is $(F\cdot\hat{T}) \Delta{s}$. Adding up incremental amounts of work leads to a Riemann sum for a line integral involving a vector field.
 
+::: {.callout-note icon=false}
+## Work
 
-> The *work* done in moving an object along a path $C$ by a force field, $F$, is given by the integral
->
-> $$
-> \int_C (F \cdot \hat{T}) ds = \int_C F\cdot d\vec{r} = \int_a^b ((F\circ\vec{r}) \cdot \frac{d\vec{r}}{dt})(t) dt.
-> $$
-
+The *work* done in moving an object along a path $C$ by a force field, $F$, is given by the integral
+$$
+\int_C (F \cdot \hat{T}) ds = \int_C F\cdot d\vec{r} = \int_a^b ((F\circ\vec{r}) \cdot \frac{d\vec{r}}{dt})(t) dt.
+$$
+:::
 
 
 ---
@@ -180,13 +181,15 @@ The canonical example is [work](https://en.wikipedia.org/wiki/Work_(physics)), w
 
 In the $n=2$ case, there is another useful interpretation of the line integral. In this dimension the normal vector, $\hat{N}$, is well defined in terms of the tangent vector, $\hat{T}$, through a rotation: $\langle a,b\rangle^t = \langle b,-a\rangle$. (The negative, $\langle -b,a\rangle$ is also a candidate, the difference in this choice would lead to a sign difference in the answer.) This allows the definition of a different line integral, called a flow integral, as detailed later:
 
+::: {.callout-note icon=false}
+## Flow
 
-> The *flow* across a curve $C$ is given by
->
-> $$
-> \int_C (F\cdot\hat{N}) ds = \int_a^b (F \circ \vec{r})(t) \cdot (\vec{r}'(t))^t dt.
-> $$
+The *flow* across a curve $C$ is given by
 
+$$
+\int_C (F\cdot\hat{N}) ds = \int_a^b (F \circ \vec{r})(t) \cdot (\vec{r}'(t))^t dt.
+$$
+:::
 
 
 ### Examples
@@ -296,9 +299,11 @@ using the Fundamental Theorem of Calculus.
 
 The main point above is that *if* the vector field is the gradient of a scalar field, then the work done depends *only* on the endpoints of the path and not the path itself.
 
+::: {.callout-note icon=false}
+## Conservative vector field
 
-> **Conservative vector field**:  If $F$ is a vector field defined in an *open* region $R$; $A$ and $B$ are points in $R$ and *if* for *any* curve $C$ in $R$ connecting $A$ to $B$, the line integral of $F \cdot \vec{T}$ over $C$ depends *only* on the endpoint $A$ and $B$ and not the path, then the line integral is called *path indenpendent* and the field is called a *conservative field*.
-
+If $F$ is a vector field defined in an *open* region $R$; $A$ and $B$ are points in $R$ and *if* for *any* curve $C$ in $R$ connecting $A$ to $B$, the line integral of $F \cdot \vec{T}$ over $C$ depends *only* on the endpoint $A$ and $B$ and not the path, then the line integral is called *path indenpendent* and the field is called a *conservative field*.
+:::
 
 
 The force of gravity is the gradient of a scalar field. As such, the two integrals above which yield $0$ could have been computed more directly. The particular scalar field is $f = -GMm/\|\vec{r}\|$, which goes by the name the gravitational *potential* function. As seen, $f$ depends only on magnitude, and as the endpoints of the path in the example have the same distance to the origin, the work integral, $(f\circ\vec{r})(b) - (f\circ\vec{r})(a)$ will be $0$.
@@ -345,17 +350,19 @@ There are technical assumptions about curves and regions that are necessary for 
 ### The fundamental theorem of line integrals
 
 
-The fact that work in a potential field is path independent is a consequence of the Fundamental Theorem of Line [Integrals](https://en.wikipedia.org/wiki/Gradient_theorem):
+The fact that work in a potential field is path independent is a consequence of
 
+::: {.callout-note icon=false}
+## The Fundamental Theorem of Line [Integrals](https://en.wikipedia.org/wiki/Gradient_theorem):
 
-> Let $U$ be an open subset of $R^n$, $f: U \rightarrow R$ a *differentiable* function and $\vec{r}: R \rightarrow R^n$ a differentiable function such that the the path $C = \vec{r}(t)$, $a\leq t\leq b$ is contained in $U$. Then
->
-> $$
-> \int_C  \nabla{f} \cdot d\vec{r} =
-> \int_a^b \nabla{f}(\vec{r}(t)) \cdot \vec{r}'(t) dt =
-> f(\vec{r}(b)) - f(\vec{r}(a)).
-> $$
+Let $U$ be an open subset of $R^n$, $f: U \rightarrow R$ a *differentiable* function and $\vec{r}: R \rightarrow R^n$ a differentiable function such that the the path $C = \vec{r}(t)$, $a\leq t\leq b$ is contained in $U$. Then
 
+$$
+\int_C  \nabla{f} \cdot d\vec{r} =
+\int_a^b \nabla{f}(\vec{r}(t)) \cdot \vec{r}'(t) dt =
+f(\vec{r}(b)) - f(\vec{r}(a)).
+$$
+:::
 
 
 That is, a line integral through a gradient field can be evaluated by evaluating the original scalar field at the endpoints of the curve. In other words, line integrals through gradient fields are conservative.
