--- a/quarto/integral_vector_calculus/stokes_theorem.qmd
+++ b/quarto/integral_vector_calculus/stokes_theorem.qmd
@@ -109,7 +109,7 @@ p = plot(legend=false, xticks=nothing, yticks=nothing, border=:none, ylim=(-1/2,
 for m in ms
     drawf!(p, f, m, 0.9*dx/2)
 end
-annotate!([(ms[6]-dx/2,-0.3, L"x_{i-1}"), (ms[6]+dx/2,-0.3, L"x_{i}")])
+annotate!([(ms[6]-dx/2,-0.3, "xᵢ₋₁}"), (ms[6]+dx/2,-0.3, "xᵢ")])
 p
 ```
 
@@ -214,18 +214,20 @@ However, the microscopic boundary integrals have cancellations that lead to a ma
 
 This all suggests that the flow integral around the surface of the larger region (the blue square) is equivalent to the integral of the curl component over the region. This is [Green](https://en.wikipedia.org/wiki/Green%27s_theorem)'s theorem, as stated by Wikipedia:
 
+::: {.callout-note icon=false}
+## Green's theorem
 
-> **Green's theorem**: Let $C$ be a positively oriented, piecewise smooth, simple closed curve in the plane, and let $D$ be the region bounded by $C$. If $F=\langle F_x, F_y\rangle$, is a vector field on an open region containing $D$  having continuous partial derivatives then:
->
-> $$
-> \oint_C F\cdot\hat{T}ds =
-> \iint_D \left(
-> \frac{\partial{F_y}}{\partial{x}} - \frac{\partial{F_x}}{\partial{y}}
-> \right) dA=
-> \iint_D \text{curl}(F)dA.
-> $$
+Let $C$ be a positively oriented, piecewise smooth, simple closed curve in the plane, and let $D$ be the region bounded by $C$. If $F=\langle F_x, F_y\rangle$, is a vector field on an open region containing $D$  having continuous partial derivatives then:
 
+$$
+\oint_C F\cdot\hat{T}ds =
+\iint_D \left(
+\frac{\partial{F_y}}{\partial{x}} - \frac{\partial{F_x}}{\partial{y}}
+\right) dA=
+\iint_D \text{curl}(F)dA.
+$$
 
+:::
 
 The statement of the theorem applies only to regions whose boundaries are simple closed curves. Not all simple regions have such boundaries. An annulus for example. This is a restriction that will be generalized.
 
@@ -271,11 +273,12 @@ r(t) = [a*cos(t),b*sin(t)]
 To compute the area of the triangle with vertices $(0,0)$, $(a,0)$ and $(0,b)$ we can orient the boundary counter clockwise. Let $A$ be the line segment from $(0,b)$ to $(0,0)$, $B$ be the line segment from $(0,0)$ to $(a,0)$, and $C$ be the other. Then
 
 
-
+$$
 \begin{align*}
 \frac{1}{2} \int_A F\cdot\hat{T} ds &=\frac{1}{2} \int_A -ydx = 0\\
 \frac{1}{2} \int_B F\cdot\hat{T} ds &=\frac{1}{2} \int_B xdy = 0,
 \end{align*}
+$$
 
 
 as on $A$, $y=0$ and $dy=0$ and on $B$, $x=0$ and $dx=0$.
@@ -311,7 +314,7 @@ For the two dimensional case the curl is a scalar. *If* $F = \langle F_x, F_y\ra
 Now assume $\partial{F_y}/\partial{x} - \partial{F_x}/\partial{y} = 0$. Let $P$ and $Q$ be two points in the plane. Take any path, $C_1$ from $P$ to $Q$ and any return path, $C_2$, from $Q$ to $P$ that do not cross and such that $C$, the concatenation of the two paths, satisfies Green's theorem. Then, as $F$ is continuous on an open interval containing $D$, we have:
 
 
-
+$$
 \begin{align*}
 0 &= \iint_D 0 dA \\
 &=
@@ -321,6 +324,7 @@ Now assume $\partial{F_y}/\partial{x} - \partial{F_x}/\partial{y} = 0$. Let $P$ 
 &=
 \int_{C_1} F \cdot \hat{T} ds + \int_{C_2}F \cdot \hat{T} ds.
 \end{align*}
+$$
 
 
 Reversing $C_2$ to go from $P$ to $Q$, we see the two work integrals are identical, that is the field is conservative.
@@ -339,13 +343,14 @@ For example, let $F(x,y) = \langle \sin(xy), \cos(xy) \rangle$. Is this a conser
 We can check by taking partial derivatives. Those of interest are:
 
 
-
+$$
 \begin{align*}
 \frac{\partial{F_y}}{\partial{x}} &= \frac{\partial{(\cos(xy))}}{\partial{x}} =
 -\sin(xy) y,\\
 \frac{\partial{F_x}}{\partial{y}} &= \frac{\partial{(\sin(xy))}}{\partial{y}} =
 \cos(xy)x.
 \end{align*}
+$$
 
 
 It is not the case that  $\partial{F_y}/\partial{x} - \partial{F_x}/\partial{y}=0$, so this vector field is *not* conservative.
@@ -417,24 +422,26 @@ p
 Let $A$ label the red line, $B$ the green curve, $C$ the blue line, and $D$ the black line. Then the area is given from Green's theorem by considering half of the the line integral of $F(x,y) = \langle -y, x\rangle$ or $\oint_C (xdy - ydx)$. To that matter we have:
 
 
-
+$$
 \begin{align*}
 \int_A (xdy - ydx) &= a(-f(a))\\
 \int_C (xdy - ydx) &= b f(b)\\
 \int_D (xdy - ydx) &= 0\\
 \end{align*}
+$$
 
 
 Finally the integral over $B$, using integration by parts:
 
 
-
+$$
 \begin{align*}
 \int_B F(\vec{r}(t))\cdot \frac{d\vec{r}(t)}{dt} dt &=
 \int_b^a \langle -f(t),t \rangle\cdot\langle 1, f'(t)\rangle dt\\
 &= \int_a^b f(t)dt - \int_a^b tf'(t)dt\\
 &= \int_a^b f(t)dt - \left(tf(t)\mid_a^b - \int_a^b f(t) dt\right).
 \end{align*}
+$$
 
 
 Combining, we have after cancellation $\oint (xdy - ydx) = 2\int_a^b f(t) dt$, or after dividing by $2$ the signed area under the curve.
@@ -470,7 +477,7 @@ The cut leads to a counter-clockwise orientation  on the outer ring and a clockw
 To see that the area integral of $F(x,y) = (1/2)\langle -y, x\rangle$ produces the area for this orientation we have, using $C_1$ as the outer ring, and $C_2$ as the inner ring:
 
 
-
+$$
 \begin{align*}
 \oint_{C_1} F \cdot \hat{T} ds &=
 \int_0^{2\pi} (1/2)(2)\langle -\sin(t), \cos(t)\rangle \cdot (2)\langle-\sin(t), \cos(t)\rangle dt \\
@@ -479,6 +486,7 @@ To see that the area integral of $F(x,y) = (1/2)\langle -y, x\rangle$ produces t
 \int_{0}^{2\pi}  (1/2) \langle \sin(t), \cos(t)\rangle \cdot \langle-\sin(t), -\cos(t)\rangle dt\\
 &= -(1/2)(2\pi) = -\pi.
 \end{align*}
+$$
 
 
 (Using $\vec{r}(t) = 2\langle \cos(t), \sin(t)\rangle$ for the outer ring and $\vec{r}(t) = 1\langle \cos(t), -\sin(t)\rangle$ for the inner ring.)
@@ -739,7 +747,7 @@ $$
 This gives the series of approximations:
 
 
-
+$$
 \begin{align*}
 \oint_C F\cdot\hat{T} ds &=
 \sum \oint_{C_i} F\cdot\hat{T} ds \\
@@ -750,18 +758,21 @@ This gives the series of approximations:
 &\approx
 \iint_S \nabla\times{F}\cdot\hat{N} dS.
 \end{align*}
+$$
 
 
 In terms of our expanding popcorn, the boundary integral - after accounting for cancellations, as in Green's theorem - can be seen as a microscopic sum of boundary integrals each of which is approximated by a term $\nabla\times{F}\cdot\hat{N} \Delta{S}$ which is viewed as a Riemann sum approximation for the the integral of the curl over the surface. The cancellation depends on a proper choice of orientation, but with that we have:
 
+::: {.callout-note icon=false}
+## Stokes' theorem
 
-> **Stokes' theorem**: Let $S$ be an orientable smooth surface in $R^3$ with boundary $C$, $C$ oriented so that the chosen normal for $S$ agrees with the right-hand rule for $C$'s orientation. Then *if* $F$ has continuous partial derivatives
->
-> $$
-> \oint_C F \cdot\hat{T} ds = \iint_S (\nabla\times{F})\cdot\hat{N} dA.
-> $$
+Let $S$ be an orientable smooth surface in $R^3$ with boundary $C$, $C$ oriented so that the chosen normal for $S$ agrees with the right-hand rule for $C$'s orientation. Then *if* $F$ has continuous partial derivatives
 
+$$
+\oint_C F \cdot\hat{T} ds = \iint_S (\nabla\times{F})\cdot\hat{N} dA.
+$$
 
+:::
 
 Green's theorem is an immediate consequence upon viewing the region in $R^2$ as a surface in $R^3$ with normal $\hat{k}$.
 
@@ -997,17 +1008,17 @@ $$
 
 the last approximation through a Riemann sum approximation. This heuristic leads to:
 
+::: {.callout-note icon=false}
+## The divergence theorem
 
-> **The divergence theorem**: Suppose $V$ is a $3$-dimensional volume which is bounded (compact) and has a boundary, $S$, that is piecewise smooth. If $F$ is a continuously differentiable vector field defined on an open set containing $V$, then:
->
-> $$
-> \iiint_V (\nabla\cdot{F}) dV = \oint_S (F\cdot\hat{N})dS.
-> $$
+Suppose $V$ is a $3$-dimensional volume which is bounded (compact) and has a boundary, $S$, that is piecewise smooth. If $F$ is a continuously differentiable vector field defined on an open set containing $V$, then:
 
-
+$$
+\iiint_V (\nabla\cdot{F}) dV = \oint_S (F\cdot\hat{N})dS.
+$$
 
 That is, the volume integral of the divergence can be computed from the flux integral over the boundary of $V$.
-
+:::
 
 ### Examples of the divergence theorem
 
@@ -1130,12 +1141,13 @@ The divergence theorem provides two means to compute a value, the point here is 
 Following Schey, we now consider a continuous analog to the crowd counting problem through a flow with a non-uniform density that may vary in time. Let $\rho(x,y,z;t)$ be the time-varying density and $v(x,y,z;t)$ be a vector field indicating the direction of flow. Consider some three-dimensional volume, $V$, with boundary $S$ (though two-dimensional would also be applicable). Then these integrals have interpretations:
 
 
-
+$$
 \begin{align*}
 \iiint_V \rho dV &&\quad\text{Amount contained within }V\\
 \frac{\partial}{\partial{t}} \iiint_V \rho dV &=
 \iiint_V \frac{\partial{\rho}}{\partial{t}} dV &\quad\text{Change in time of amount contained within }V
 \end{align*}
+$$
 
 
 Moving the derivative inside the integral requires an assumption of continuity. Assume the material is *conserved*, meaning that if the amount in the volume $V$ changes it must  flow in and out through the boundary. The flow out through $S$, the boundary of $V$, is
