--- a/quarto/integrals/arc_length.qmd
+++ b/quarto/integrals/arc_length.qmd
@@ -48,14 +48,18 @@ Recall the distance formula gives the distance between two points: $\sqrt{(x_1 -
 
 Consider now two functions $g(t)$ and $f(t)$ and the parameterized graph between $a$ and $b$ given by the points $(g(t), f(t))$ for $a \leq t \leq b$. Assume that both $g$ and $f$ are differentiable on $(a,b)$ and continuous on $[a,b]$ and furthermore that $\sqrt{g'(t)^2 + f'(t)^2}$ is Riemann integrable.
 
+::: {.callout-note icon=false}
+## The arc length of a curve
 
-> **The arc length of a curve**. For $f$ and $g$ as described, the arc length of the parameterized curve is given by
->
-> $L = \int_a^b \sqrt{g'(t)^2 + f'(t)^2} dt.$
->
-> For the special case of the graph of a function $f(x)$ between $a$ and $b$ the formula becomes $L = \int_a^b \sqrt{ 1 + f'(x)^2} dx$ (taking $g(t) = t$).
+For $f$ and $g$ as described, the arc length of the parameterized curve is given by
 
+$$
+L = \int_a^b \sqrt{g'(t)^2 + f'(t)^2} dt.
+$$
 
+For the special case of the graph of a function $f(x)$ between $a$ and $b$ the formula becomes $L = \int_a^b \sqrt{ 1 + f'(x)^2} dx$ (taking $g(t) = t$).
+
+:::
 
 :::{.callout-note}
 ## Note
@@ -126,7 +130,7 @@ $$
 But looking at each term, we can push the denominator into the square root as:
 
 
-
+$$
 \begin{align*}
 d_i &= d_i \cdot \frac{t_i - t_{i-1}}{t_i - t_{i-1}}
 \\
@@ -134,6 +138,7 @@ d_i &= d_i \cdot \frac{t_i - t_{i-1}}{t_i - t_{i-1}}
 \left(\frac{f(t_i)-f(t_{i-1})}{t_i-t_{i-1}}\right)^2} \cdot (t_i - t_{i-1}) \\
 &= \sqrt{ g'(\xi_i)^2 + f'(\psi_i)^2} \cdot (t_i - t_{i-1}).
 \end{align*}
+$$
 
 
 The values $\xi_i$ and $\psi_i$ are guaranteed by the mean value theorem and must be in $[t_{i-1}, t_i]$.
@@ -272,7 +277,7 @@ nothing
 The museum notes have
 
 
-> For his Catenary series (1997–2003), of which Near the Lagoon is    the largest and last work, Johns formed catenaries—a term used to    describe the curve assumed by a cord suspended freely from two    points—by tacking ordinary household string to the canvas or its    supports.
+> For his Catenary series (1997–2003), of which Near the Lagoon is    the largest and last work, Johns formed catenaries—a term used to    describe the curve assumed by a cord suspended freely from two points—by tacking ordinary household string to the canvas or its    supports.
 
 
 
@@ -377,11 +382,12 @@ nothing
 The [nephroid](http://www-history.mcs.st-and.ac.uk/Curves/Nephroid.html) is a curve that can be described parametrically by
 
 
-
+$$
 \begin{align*}
 g(t) &= a(3\cos(t) - \cos(3t)), \\
 f(t) &= a(3\sin(t) - \sin(3t)).
 \end{align*}
+$$
 
 
 Taking $a=1$ we have this graph:
@@ -407,7 +413,7 @@ quadgk(t -> sqrt(𝒈'(t)^2 + 𝒇'(t)^2), 0, 2pi)[1]
 The answer seems like a floating point approximation of $24$, which  suggests that  this integral is tractable. Pursuing this, the integrand simplifies:
 
 
-
+$$
 \begin{align*}
 \sqrt{g'(t)^2 + f'(t)^2}
 &= \sqrt{(-3\sin(t) + 3\sin(3t))^2 + (3\cos(t) - 3\cos(3t))^2} \\
@@ -417,6 +423,7 @@ The answer seems like a floating point approximation of $24$, which  suggests th
 &= 3\sqrt{2}\sqrt{1 - \cos(2t)}\\
 &= 3\sqrt{2}\sqrt{2\sin(t)^2}.
 \end{align*}
+$$
 
 
 The second to last line comes from a double angle formula expansion of $\cos(3t - t)$ and the last line from the half angle formula for $\cos$.
@@ -452,13 +459,14 @@ A teacher of small children assigns his students the task of computing the lengt
 Mathematically, suppose a curve is described parametrically by $(g(t), f(t))$ for $a \leq t \leq b$. A new parameterization is provided by $\gamma(t)$. Suppose $\gamma$ is strictly increasing, so that an inverse function exists. (This assumption is implicitly made by the teacher, as it implies the student won't start counting in the wrong direction.) Then the same curve is described by composition through $(g(\gamma(u)), f(\gamma(u)))$, $\gamma^{-1}(a) \leq u \leq \gamma^{-1}(b)$. That the arc length is the same follows from substitution:
 
 
-
+$$
 \begin{align*}
 \int_{\gamma^{-1}(a)}^{\gamma^{-1}(b)} \sqrt{([g(\gamma(t))]')^2 + ([f(\gamma(t))]')^2} dt
 &=\int_{\gamma^{-1}(a)}^{\gamma^{-1}(b)} \sqrt{(g'(\gamma(t) )\gamma'(t))^2 + (f'(\gamma(t) )\gamma'(t))^2 } dt \\
 &=\int_{\gamma^{-1}(a)}^{\gamma^{-1}(b)} \sqrt{g'(\gamma(t))^2 + f'(\gamma(t))^2} \gamma'(t) dt\\
 &=\int_a^b \sqrt{g'(u)^2 + f'(u)^2} du = L
 \end{align*}
+$$
 
 
 (Using $u=\gamma(t)$ for the substitution.)
@@ -483,12 +491,13 @@ For a simple example, we have $g(t) = R\cos(t)$ and $f(t)=R\sin(t)$ parameterizi
 What looks at first glance to be just a slightly more complicated equation is that of an ellipse, with $g(t) = a\cos(t)$ and $f(t) = b\sin(t)$. Taking $a=1$ and $b = a + c$, for $c > 0$ we get the equation for the arc length as a function of $t$ is just
 
 
-
+$$
 \begin{align*}
 s(u) &= \int_0^u \sqrt{(-\sin(t))^2 + b\cos(t)^2} dt\\
      &= \int_0^u \sqrt{\sin(t)^2 + \cos(t)^2 + c\cos(t)^2} dt  \\
 	 &=\int_0^u \sqrt{1 + c\cos(t)^2} dt.
 \end{align*}
+$$
 
 
 But, despite it not looking too daunting, this integral is not tractable through our techniques and has an answer involving elliptic integrals. We can work numerically though. Letting $a=1$ and $b=2$, we have the arc length is given by:
@@ -588,11 +597,12 @@ $$
 So
 
 
-
+$$
 \begin{align*}
 \int_0^1 (tf'(u) + (1-t)f'(v)) dt &< \int_0^1 f'(tu + (1-t)v) dt, \text{or}\\
 \frac{f'(u) + f'(v)}{2} &< \frac{1}{v-u}\int_u^v f'(w) dw,
 \end{align*}
+$$
 
 
 by the substitution $w = tu + (1-t)v$. Using the fundamental theorem of calculus to compute the mean value of the integral of $f'$ over $[u,v]$ gives the following as a consequence of strict concavity of $f'$:
@@ -684,24 +694,26 @@ which holds by the strict concavity of $f'$, as found previously.
 Using the substitution $x = f_i^{-1}(u)$ as needed to see:
 
 
-
+$$
 \begin{align*}
 \int_a^u f(x) dx &= \int_0^{f(u)} u [f_1^{-1}]'(u) du \\
 &> -\int_0^h u [f_2^{-1}]'(u) du \\
 &= \int_h^0 u [f_2^{-1}]'(u) du \\
 &= \int_v^b f(x) dx.
 \end{align*}
+$$
 
 
 For the latter claim, integrating in the $y$ variable gives
 
 
-
+$$
 \begin{align*}
 \int_u^c (f(x)-h) dx &= \int_h^m (c - f_1^{-1}(y)) dy\\
 &> \int_h^m (c - f_2^{-1}(y)) dy\\
 &= \int_c^v (f(x)-h) dx
 \end{align*}
+$$
 
 
 Now, the area under $h$ over $[u,c]$ is greater than that over $[c,v]$ as $(u+v)/2 < c$ or $v-c < c-u$. That means the area under $f$ over $[u,c]$ is greater than that over $[c,v]$.
@@ -724,7 +736,7 @@ or $\phi'(z) < 0$. Moreover, we have by the first assertion that $f'(z) < -f'(\p
 Using the substitution $x = \phi(z)$ gives:
 
 
-
+$$
 \begin{align*}
 \int_v^b \sqrt{1 + f'(x)^2} dx &=
 \int_u^a \sqrt{1 + f'(\phi(z))^2} \phi'(z) dz\\
@@ -733,6 +745,7 @@ Using the substitution $x = \phi(z)$ gives:
 &= \int_a^u \sqrt{\phi'(z)^2 + f'(z)^2} dz\\
 &< \int_a^u \sqrt{1 + f'(z)^2} dz
 \end{align*}
+$$
 
 
 Letting $h=f(u \rightarrow c)$ we get the *inequality*
@@ -782,11 +795,12 @@ $$
 with the case above corresponding to $W = -m(k/m)$. The set of equations then satisfy:
 
 
-
+$$
 \begin{align*}
 x''(t) &= - W(t,x(t), x'(t), y(t), y'(t)) \cdot x'(t)\\
 y''(t) &= -g - W(t,x(t), x'(t), y(t), y'(t)) \cdot y'(t)\\
 \end{align*}
+$$
 
 
 with initial conditions: $x(0) = y(0) = 0$ and $x'(0) = v_0 \cos(\theta), y'(0) = v_0 \sin(\theta)$.
@@ -795,28 +809,30 @@ with initial conditions: $x(0) = y(0) = 0$ and $x'(0) = v_0 \cos(\theta), y'(0) 
 Only with certain drag forces, can this set of equations be solved exactly, though it can be approximated numerically for admissible $W$, but if $W$ is strictly positive then it can be shown $x(t)$ is increasing on $[0, x_\infty)$ and so invertible, and $f(u) = y(x^{-1}(u))$ is three times differentiable with both $f$ and $f'$ being strictly concave, as it can be shown that (say $x(v) = u$ so $dv/du = 1/x'(v) > 0$):
 
 
-
+$$
 \begin{align*}
 f''(u) &= -\frac{g}{x'(v)^2} < 0\\
 f'''(u) &= \frac{2gx''(v)}{x'(v)^3} \\
 &= -\frac{2gW}{x'(v)^2}  \cdot \frac{dv}{du} < 0
 \end{align*}
+$$
 
 
 The latter by differentiating, the former a consequence of the following formulas for derivatives of inverse functions
 
 
-
+$$
 \begin{align*}
 [x^{-1}]'(u) &= 1 / x'(v) \\
 [x^{-1}]''(u) &= -x''(v)/(x'(v))^3
 \end{align*}
+$$
 
 
 For then
 
 
-
+$$
 \begin{align*}
 f(u)   &= y(x^{-1}(u)) \\
 f'(u)  &= y'(x^{-1}(u)) \cdot {x^{-1}}'(u) \\
@@ -825,6 +841,7 @@ f''(u) &= y''(x^{-1}(u))\cdot[x^{-1}]'(u)^2 + y'(x^{-1}(u)) \cdot [x^{-1}]''(u) 
        &= -g/(x'(v))^2 - W y'/(x'(v))^2 - y'(v) \cdot (- W \cdot x'(v)) / x'(v)^3\\
        &= -g/x'(v)^2.
 \end{align*}
+$$
 
 
 ## Questions
