--- a/quarto/integrals/mean_value_theorem.qmd
+++ b/quarto/integrals/mean_value_theorem.qmd
@@ -89,13 +89,14 @@ Though not continuous, $f(x)$ is integrable as it contains only jumps. The integ
 What is the average value of the function $e^{-x}$ between $0$ and $\log(2)$?
 
 
-
+$$
 \begin{align*}
 \text{average} = \frac{1}{\log(2) - 0} \int_0^{\log(2)} e^{-x} dx\\
 &= \frac{1}{\log(2)} (-e^{-x}) \big|_0^{\log(2)}\\
 &= -\frac{1}{\log(2)} (\frac{1}{2} - 1)\\
 &= \frac{1}{2\log(2)}.
 \end{align*}
+$$
 
 
 Visualizing, we have
@@ -118,11 +119,15 @@ $$
 
 When we assume that $f(x)$ is continuous, we can describe $K$ as a value in the range of $f$:
 
+::: {.callout-note icon=false}
+## The mean value theorem for integrals
 
-> **The mean value theorem for integrals**: Let $f(x)$ be a continuous function on $[a,b]$ with $a < b$. Then there exists $c$ with $a \leq c \leq b$ with
->
-> $f(c) \cdot (b-a) = \int_a^b f(x) dx.$`
+Let $f(x)$ be a continuous function on $[a,b]$ with $a < b$. Then there exists $c$ with $a \leq c \leq b$ with
 
+$$
+f(c) \cdot (b-a) = \int_a^b f(x) dx.
+$$
+:::
 
 
 The proof comes from the intermediate value theorem and the extreme value theorem. Since $f$ is continuous on a closed interval, there exists values $m$ and $M$ with $f(c_m) = m \leq f(x) \leq M=f(c_M)$, for some $c_m$ and $c_M$ in the interval $[a,b]$. Since $m \leq f(x) \leq M$, we must have:
