--- a/quarto/limits/continuity.qmd
+++ b/quarto/limits/continuity.qmd
@@ -16,6 +16,8 @@ using SymPy
 
 ---
 
+![A Möbius strip by Koo Jeong A](figures/korean-mobius.jpg){width=40%}
+
 
 The definition Google finds for *continuous* is *forming an unbroken whole; without interruption*.
 
@@ -54,12 +56,15 @@ However, [Cauchy](http://en.wikipedia.org/wiki/Cours_d%27Analyse) defined contin
 
 The [modern](http://en.wikipedia.org/wiki/Continuous_function#History) definition simply pushes the details to the definition of the limit:
 
+::: {.callout-note icon=false}
+## Definition of continuity at a point
 
-> A function $f(x)$ is continuous at $x=c$ if $\lim_{x \rightarrow c}f(x) = f(c)$.
+A function $f(x)$ is continuous at $x=c$ if $\lim_{x \rightarrow c}f(x) = f(c)$.
+
+:::
 
 
-
-This says three things
+The definition says three things
 
 
   * The limit exists at $c$.
@@ -67,11 +72,14 @@ This says three things
   * The value of the limit is the same as $f(c)$.
 
 
-This speaks to continuity at a point, we can extend this to continuity over an interval $(a,b)$ by saying:
+The defined speaks to continuity at a point, we can extend it to continuity over an interval $(a,b)$ by saying:
 
+::: {.callout-note icon=false}
+## Definition of continuity over an open interval
 
-> A function $f(x)$ is continuous over $(a,b)$ if at each point $c$ with $a < c < b$, $f(x)$ is continuous at $c$.
+A function $f(x)$ is continuous over $(a,b)$ if at each point $c$ with $a < c < b$, $f(x)$ is continuous at $c$.
 
+:::
 
 
 Finally, as with limits, it can be convenient to speak of *right* continuity and *left* continuity at a point, where the limit in the definition is replaced by a right or left limit, as appropriate.
@@ -192,7 +200,7 @@ $$
 What value of $c$ will make $f(x)$ a continuous function?
 
 
-We note that for $x < 0$ and for $x > 0$ the function is a simple polynomial, so is continuous. At $x=0$ to be continuous we need a limit to exists and be equal to $f(0)$, which is $c$. A limit exists if the left and right limits are equal. This means we need to solve for $c$ to make the left and right limits equal. We do this next with a bit of overkill in this case:
+We note that for $x < 0$ and for $x > 0$ the function is defined by a simple polynomial, so is continuous. At $x=0$ to be continuous we need a limit to exists and be equal to $f(0)$, which is $c$. A limit exists if the left and right limits are equal. This means we need to solve for $c$ to make the left and right limits equal. We do this next with a bit of overkill in this case:
 
 
 ```{julia}
@@ -206,7 +214,7 @@ We need to solve for $c$ to make `del` zero:
 
 
 ```{julia}
-solve(del, c)
+solve(del ~ 0, c)
 ```
 
 This gives the value of $c$.
