--- a/quarto/limits/intermediate_value_theorem.qmd
+++ b/quarto/limits/intermediate_value_theorem.qmd
@@ -17,14 +17,19 @@ using SymPy
 ---
 
 
-Continuity for functions is a valued property which carries implications. In this section we discuss two: the intermediate value theorem and the extreme value theorem. These two theorems speak to some fundamental applications of calculus: finding zeros of a function and finding extrema of a function.
+![Between points M and M lies an F](figures/ivt.jpg){width=40%}
+
+Continuity for functions is a valued property which carries implications. In this section we discuss two: the intermediate value theorem and the extreme value theorem. These two theorems speak to some fundamental applications of calculus: finding zeros of a function and finding extrema of a function. [L'Hospitals](https://ia801601.us.archive.org/26/items/infinimentpetits1716lhos00uoft/infinimentpetits1716lhos00uoft.pdf) figure 55, above, suggests why.
 
 
 ## Intermediate Value Theorem
 
+::: {.callout-note icon=false}
+## The intermediate value theorem
 
-> The *intermediate value theorem*: If $f$ is continuous on $[a,b]$  with, say, $f(a) < f(b)$, then for any $y$ with $f(a) \leq y \leq f(b)$  there exists a $c$ in $[a,b]$ with $f(c) = y$.
+If $f$ is continuous on $[a,b]$  with, say, $f(a) < f(b)$, then for any $y$ with $f(a) \leq y \leq f(b)$  there exists a $c$ in $[a,b]$ with $f(c) = y$.
 
+:::
 
 
 ```{julia}
@@ -98,7 +103,9 @@ sign_chart(f, -3, 3)
 The intermediate value theorem can find the sign of the function *between* adjacent zeros, but how are the zeros identified?
 
 Here, we use the Bolzano theorem to give an algorithm - the *bisection method* - to locate a value $c$ in $[a,b]$ with $f(c) = 0$ under the assumptions:
+
 * $f$ is continuous on $[a,b]$
+
 * $f$ changes sign between $a$ and $b$. (In particular, when  $f(a)$ and $f(b)$ have different signs.)
 
 ::: {.callout-note}
@@ -375,11 +382,11 @@ For symbolic expressions, as below, then, as a convenience, an equation (formed 
 
 ```{julia}
 @syms x
-solve(cos(x) ~ x, (0, 2))
+find_zero(cos(x) ~ x, (0, 2))
 ```
 :::
 
-[![Intersection of two curves as illustrated by Canadian artist Kapwani Kiwanga.](figures/intersection-biennale.jpg)](https://www.gallery.ca/whats-on/touring-exhibitions-and-loans/around-the-world/canada-pavilion-at-the-venice-biennale/kapwani-kiwanga-trinket)
+[![Intersection of two curves as illustrated by Canadian artist Kapwani Kiwanga.](figures/intersection-biennale.jpg)](https://www.gallery.ca/whats-on/touring-exhibitions-and-loans/around-the-world/canada-pavilion-at-the-venice-biennale/kapwani-kiwanga-trinket){width=40%}
 
 ##### Example: Inverse functions
 
@@ -496,11 +503,12 @@ For the model without wind resistance, we can graph the function easily enough. 
 plot(j, 0, 500)
 ```
 
-Well, we haven't even seen the peak yet. Better to do a little spade work first. This is a quadratic function, so we can use `roots` from `SymPy` to find the roots:
+Well, we haven't even seen the peak yet. Better to do a little spade work first. This is a quadratic function, so we can use `solve` from `SymPy` to find the roots:
 
 
 ```{julia}
-roots(j(x))
+@syms x
+solve(j(x) ~ 0, x)
 ```
 
 We see that $1250$ is the largest root. So we plot over this domain to visualize the flight:
@@ -706,22 +714,25 @@ The Extreme Value Theorem is another consequence of continuity.
 
 To discuss the extreme value theorem, we define an *absolute maximum*.
 
+::: {.callout-note icon=false}
+## Absolute maximum, absolute minimum
 
-> The absolute maximum of $f(x)$ over an interval $I$, when it exists, is the value $f(c)$, $c$ in $I$, where $f(x) \leq f(c)$ for any $x$ in $I$.
->
-> Similarly, an *absolute minimum* of $f(x)$ over an interval $I$ can be defined, when it exists, by a value $f(c)$ where $c$ is in $I$ *and* $f(c) \leq f(x)$ for any $x$ in $I$.
+The absolute maximum of $f(x)$ over an interval $I$, when it exists, is the value $f(c)$, $c$ in $I$, where $f(x) \leq f(c)$ for any $x$ in $I$.
 
+Similarly, an *absolute minimum* of $f(x)$ over an interval $I$ can be defined, when it exists, by a value $f(c)$ where $c$ is in $I$ *and* $f(c) \leq f(x)$ for any $x$ in $I$.
+:::
 
 
 Related but different is the concept of a relative of *local extrema*:
 
+::: {.callout-note icon=false}
+## Local maximum, local minimum
 
-> A local maxima for $f$ is a value $f(c)$ where $c$ is in **some** *open* interval $I=(a,b)$, $I$ in the domain of $f$, and $f(c)$ is an absolute maxima for $f$ over $I$. Similarly, an local minima for $f$ is a value $f(c)$ where $c$ is in **some** *open* interval $I=(a,b)$, $I$ in the domain of $f$, and $f(x)$ is an absolute minima for $f$ over $I$.
-
+A local maxima for $f$ is a value $f(c)$ where $c$ is in **some** *open* interval $I=(a,b)$, $I$ in the domain of $f$, and $f(c)$ is an absolute maxima for $f$ over $I$. Similarly, an local minima for $f$ is a value $f(c)$ where $c$ is in **some** *open* interval $I=(a,b)$, $I$ in the domain of $f$, and $f(x)$ is an absolute minima for $f$ over $I$.
 
 
 The term *local extrema* is used to describe either a local maximum or local minimum.
-
+:::
 
 The key point, is the extrema are values in the *range* that are realized by some value in the *domain* (possibly more than one.)
 
@@ -742,14 +753,16 @@ nothing
 ```
 
 [![Elevation profile of the  Hardrock 100 ultramarathon. Treating the elevation profile as a function, the absolute maximum is just about 14,000 feet and the absolute minimum about 7600 feet. These are of interest to the runner for different reasons. Also of interest would be each local maxima and local minima - the peaks and valleys of the graph - and the total elevation climbed - the latter so important/unforgettable its value makes it into the chart's title.
-](limits/figures/hardrock-100.jpeg)](https://hardrock100.com)
+](figures/hardrock-100.jpeg)](https://hardrock100.com){width=50%}
 
 The extreme value theorem discusses an assumption that ensures absolute maximum and absolute minimum values exist.
 
+::: {.callout-note icon=false}
+## The extreme value theorem
 
-> The *extreme value theorem*: If $f(x)$ is continuous over a closed  interval $[a,b]$ then $f$ has an absolute maximum and an absolute  minimum over $[a,b]$.
+If $f(x)$ is continuous over a closed  interval $[a,b]$ then $f$ has an absolute maximum and an absolute  minimum over $[a,b]$.
 
-
+:::
 
 (By continuous over $[a,b]$ we mean continuous on $(a,b)$ and right continuous at $a$ and left continuous at $b$.)
 
@@ -1013,7 +1026,7 @@ nothing
 ```
 
 ![Trajectories of potential cannonball fires with air-resistance included. (http://ej.iop.org/images/0143-0807/33/1/149/Full/ejp405251f1_online.jpg)
-](figures/cannonball.jpg)
+](figures/cannonball.jpg){width=50%}
 
 In 1638, according to Amir D. [Aczel](http://books.google.com/books?id=kvGt2OlUnQ4C&pg=PA28&lpg=PA28&dq=mersenne+cannon+ball+tests&source=bl&ots=wEUd7e0jFk&sig=LpFuPoUvODzJdaoug4CJsIGZZHw&hl=en&sa=X&ei=KUGcU6OAKJCfyASnioCoBA&ved=0CCEQ6AEwAA#v=onepage&q=mersenne%20cannon%20ball%20tests&f=false), an experiment was performed in the French Countryside. A monk, Marin Mersenne, launched a cannonball straight up into the air in an attempt to help Descartes prove facts about the rotation of the earth. Though the experiment was not successful, Mersenne later observed that the time for the cannonball to go up was greater than the time to come down. ["Vertical Projection in a Resisting Medium: Reflections on Observations of Mersenne".](http://www.maa.org/publications/periodicals/american-mathematical-monthly/american-mathematical-monthly-contents-junejuly-2014)
 
