--- a/quarto/limits/limits.qmd
+++ b/quarto/limits/limits.qmd
@@ -181,9 +181,12 @@ Informally, if a limit exists it is the value that $f(x)$ gets close to as $x$ g
 
 The modern formulation is due to Weierstrass:
 
+::: {.callout-note icon=false}
+## The $\epsilon-\delta$ Definition of a limit of $f(x)$
 
-> The limit of $f(x)$ as $x$ approaches $c$ is $L$ if for every real $\epsilon > 0$, there exists a real $\delta > 0$ such that for all real $x$, $0 < \lvert x − c \rvert < \delta$ implies $\lvert f(x) − L \rvert < \epsilon$. The notation used is $\lim_{x \rightarrow c}f(x) = L$.
+The limit of $f(x)$ as $x$ approaches $c$ is $L$ if for every real $\epsilon > 0$, there exists a real $\delta > 0$ such that for all real $x$, $0 < \lvert x − c \rvert < \delta$ implies $\lvert f(x) − L \rvert < \epsilon$. The notation used is $\lim_{x \rightarrow c}f(x) = L$.
 
+:::
 
 
 We comment on this later.
@@ -266,14 +269,14 @@ xs = [1/10^i for i in 1:5]
 This progression can be seen to be increasing. Cauchy, in his treatise, can see this through:
 
 
-
+$$
 \begin{align*}
 (1 + \frac{1}{m})^n &= 1 + \frac{1}{1} + \frac{1}{1\cdot 2}(1 - \frac{1}{m}) +  \\
 & \frac{1}{1\cdot 2\cdot 3}(1 - \frac{1}{m})(1 -  \frac{2}{m}) + \cdots \\
 &+
 \frac{1}{1 \cdot 2 \cdot \cdots \cdot m}(1 - \frac{1}{m}) \cdot \cdots \cdot (1 - \frac{m-1}{m}).
 \end{align*}
-
+$$
 
 These values are clearly increasing as $m$ increases. Cauchy showed the value was bounded between $2$ and $3$ and had the approximate value above. Then he showed the restriction to integers was not necessary. Later we will use this definition for the exponential function:
 
@@ -597,6 +600,7 @@ Hmm, the values in `ys` appear to be going to $0.5$, but then end up at $0$. Is 
 
 
 ```{julia}
+xs = [1/10^i for i in 1:8]
 y1s = [1 - cos(x) for x in xs]
 y2s = [x^2 for x in xs]
 [xs y1s y2s]
@@ -722,7 +726,7 @@ For example, the limit at $0$ of $(1-\cos(x))/x^2$ is easily handled:
 limit((1 - cos(x)) / x^2, x => 0)
 ```
 
-The pair notation (`x => 0`) is used to indicate the variable and the value it is going to. A `dir` argument is used to indicate ``x \rightarrow c+`` (the default), ``x \rightarrow c-``, and ``x \rightarrow c``.
+The pair notation (`x => 0`) is used to indicate the variable and the value it is going to. A `dir` argument is used to indicate $x \rightarrow c+$ (the default, or `dir="+"`), $x \rightarrow c-$ (`dir="-"`), and $x \rightarrow c$ (`dir="+-"`).
 
 
 ##### Example
@@ -856,7 +860,7 @@ This accurately shows the limit does not exist mathematically, but `limit(ceil(x
 The `limit` function doesn't compute limits from the definition, rather it applies some known facts about functions within a set of rules. Some of these rules are the following. Suppose the individual limits of $f$ and $g$ always exist (and are finite) below.
 
 
-
+$$
 \begin{align*}
 \lim_{x \rightarrow c} (a \cdot f(x) + b \cdot g(x)) &= a \cdot
   \lim_{x \rightarrow c} f(x) + b \cdot \lim_{x \rightarrow c} g(x)
@@ -870,7 +874,7 @@ The `limit` function doesn't compute limits from the definition, rather it appli
   \frac{\lim_{x \rightarrow c} f(x)}{\lim_{x \rightarrow c} g(x)}
   &(\text{provided }\lim_{x \rightarrow c} g(x) \neq 0)\\
 \end{align*}
-
+$$
 
 These are verbally described as follows, when the individual limits exist and are finite then:
 
@@ -920,7 +924,7 @@ $$
 This is clearly related to the function $f(x) = \sin(x)/x$, which has a limit of $1$ as $x \rightarrow 0$. We see $g(x) = k f(kx)$ is the limit in question. As $kx \rightarrow 0$, though not taking a value of $0$ except when $x=0$, the limit above is $k \lim_{x \rightarrow 0} f(kx) = k \lim_{u \rightarrow 0} f(u) = k$.
 
 
-Basically when taking a limit as $x$ goes to $0$ we can multiply $x$ by any constant and figure out the limit for that. (It is as though we "go to" $0$ faster or slower. but are still going to $0$.
+Basically when taking a limit as $x$ goes to $0$ we can multiply $x$ by any constant and figure out the limit for that. (It is as though we "go to" $0$ faster or slower, but are still going to $0$.)
 
 
 Similarly,
