--- a/quarto/derivatives/derivatives.qmd
+++ b/quarto/derivatives/derivatives.qmd
@@ -22,6 +22,8 @@ nothing
 
 ---
 
+![Device to measure units of distance by units of time](figures/galileo-ramp.png){width=60%}
+
 
 Before defining the derivative of a function, let's begin with two motivating examples.
 
@@ -520,13 +522,14 @@ This holds two rules: the derivative of a constant times a function is the const
 This example shows a useful template:
 
 
-
+$$
 \begin{align*}
 [2x^2 - \frac{x}{3} + 3e^x]' & = 2[\square]' - \frac{[\square]'}{3} + 3[\square]'\\
 &= 2[x^2]' - \frac{[x]'}{3} + 3[e^x]'\\
 &= 2(2x) - \frac{1}{3} + 3e^x\\
 &= 4x - \frac{1}{3} + 3e^x
 \end{align*}
+$$
 
 
 ### Product rule
@@ -548,12 +551,13 @@ The output uses the Leibniz notation to represent that the derivative of $u(x) \
 This example shows a useful template for the product rule:
 
 
-
+$$
 \begin{align*}
 [(x^2+1)\cdot e^x]' &= [\square]' \cdot (\square) + (\square) \cdot [\square]'\\
 &= [x^2 + 1]' \cdot (e^x) + (x^2+1) \cdot [e^x]'\\
 &= (2x)\cdot e^x + (x^2+1)\cdot e^x
 \end{align*}
+$$
 
 
 ### Quotient rule
@@ -572,12 +576,13 @@ limit((f(x+h) - f(x))/h, h => 0)
 This example shows a useful template for the quotient rule:
 
 
-
+$$
 \begin{align*}
 [\frac{x^2+1}{e^x}]' &= \frac{[\square]' \cdot (\square) - (\square) \cdot [\square]'}{(\square)^2}\\
 &= \frac{[x^2 + 1]' \cdot (e^x) - (x^2+1) \cdot [e^x]'}{(e^x)^2}\\
 &= \frac{(2x)\cdot e^x - (x^2+1)\cdot e^x}{e^{2x}}
 \end{align*}
+$$
 
 
 ##### Examples
@@ -672,19 +677,21 @@ There are $n$ terms, each where one of the $f_i$s have a derivative. Were we to 
 
 
 With this, we can proceed. Each term $x-i$ has derivative $1$, so the answer to $f'(x)$, with $f$ as above, is
-
+$$
 \begin{align*}
 f'(x) &= f(x)/(x-1) + f(x)/(x-2) + f(x)/(x-3)\\
       &+ f(x)/(x-4) + f(x)/(x-5),
 \end{align*}
+$$
 
 That is
-
+$$
 \begin{align*}
 f'(x) &= (x-2)(x-3)(x-4)(x-5) + (x-1)(x-3)(x-4)(x-5)\\
       &+ (x-1)(x-2)(x-4)(x-5) + (x-1)(x-2)(x-3)(x-5) \\
 	  &+ (x-1)(x-2)(x-3)(x-4).
 \end{align*}
+$$
 
 ---
 
@@ -749,17 +756,18 @@ Combined, we would end up with:
 To see that this works in our specific case, we assume the general power rule that $[x^n]' = n x^{n-1}$ to get:
 
 
-
+$$
 \begin{align*}
 f(x) &= x^2 & g(x) &= \sqrt{x}\\
 f'(\square) &= 2(\square) & g'(x) &= \frac{1}{2}x^{-1/2}
 \end{align*}
+$$
 
 
 We use $\square$ for the argument of `f'` to emphasize that $g(x)$ is the needed value, not just $x$:
 
 
-
+$$
 \begin{align*}
 [(\sqrt{x})^2]' &= [f(g(x)]'\\
 &= f'(g(x)) \cdot g'(x) \\
@@ -767,6 +775,7 @@ We use $\square$ for the argument of `f'` to emphasize that $g(x)$ is the needed
 &= \frac{2\sqrt{x}}{2\sqrt{x}}\\
 &=1
 \end{align*}
+$$
 
 
 This is the same as the derivative of $x$ found by first evaluating the composition. For this problem, the chain rule is not necessary, but typically it is a needed rule to fully differentiate a function.
@@ -778,11 +787,12 @@ This is the same as the derivative of $x$ found by first evaluating the composit
 Find the derivative of $f(x) = \sqrt{1 - x^2}$. We identify the composition of $\sqrt{x}$  and $(1-x^2)$. We set the functions and their derivatives into a pattern to emphasize the pieces in the chain-rule formula:
 
 
-
+$$
 \begin{align*}
 f(x) &=\sqrt{x} = x^{1/2}  & g(x) &= 1 - x^2     \\
 f'(\square) &=(1/2)(\square)^{-1/2}  & g'(x) &= -2x
 \end{align*}
+$$
 
 
 Then:
@@ -823,11 +833,12 @@ This is a useful rule to remember for expressions involving exponentials.
 
 Find the derivative of $\sin(x)\cos(2x)$ at $x=\pi$.
 
-
+$$
 \begin{align*}
 [\sin(x)\cos(2x)]'\big|_{x=\pi} &=(\cos(x)\cos(2x) + \sin(x)(-\sin(2x)\cdot 2))\big|_{x=\pi} \\
 & =((-1)(1) + (0)(-0)(2)) = -1.
 \end{align*}
+$$
 
 ##### Proof of the Chain Rule
 
@@ -844,23 +855,25 @@ g(a+h) = g(a) + g'(a)h + \epsilon_g(h) h = g(a) + h',
 $$
 
 Where $h' = (g'(a) + \epsilon_g(h))h \rightarrow 0$ as $h \rightarrow 0$ will be used to simplify the following:
-
+$$
 \begin{align*}
 f(g(a+h)) - f(g(a)) &=
 f(g(a) + g'(a)h + \epsilon_g(h)h) - f(g(a)) \\
 &= f(g(a)) + f'(g(a)) (g'(a)h + \epsilon_g(h)h) + \epsilon_f(h')(h') - f(g(a))\\
 &= f'(g(a)) g'(a)h  + f'(g(a))(\epsilon_g(h)h) + \epsilon_f(h')(h').
 \end{align*}
+$$
 
 Rearranging:
 
-
+$$
 \begin{align*}
 f(g(a+h)) &- f(g(a)) - f'(g(a)) g'(a) h\\
 &= f'(g(a))\epsilon_g(h)h + \epsilon_f(h')(h')\\
 &=(f'(g(a)) \epsilon_g(h)  + \epsilon_f(h') (g'(a) + \epsilon_g(h)))h \\
 &=\epsilon(h)h,
 \end{align*}
+$$
 
 where $\epsilon(h)$ combines the above terms which go to zero as $h\rightarrow 0$ into one. This is the alternative definition of the derivative, showing $(f\circ g)'(a) = f'(g(a)) g'(a)$ when $g$ is differentiable at $a$ and $f$ is differentiable at $g(a)$.
 
@@ -871,17 +884,18 @@ where $\epsilon(h)$ combines the above terms which go to zero as $h\rightarrow 0
 The chain rule name could also be simply the "composition rule," as that is the operation the rule works for. However, in practice, there are usually *multiple* compositions, and the "chain" rule is used to chain together the different pieces. To get a sense, consider a triple composition $u(v(w(x)))$. This will have derivative:
 
 
-
+$$
 \begin{align*}
 [u(v(w(x)))]' &= u'(v(w(x))) \cdot [v(w(x))]' \\
 &=  u'(v(w(x))) \cdot v'(w(x)) \cdot w'(x)
 \end{align*}
+$$
 
 
 The answer can be viewed as a repeated peeling off of the outer function, a view with immediate application to many compositions. To see that in action with an expression, consider this derivative problem, shown in steps:
 
 
-
+$$
 \begin{align*}
 [\sin(e^{\cos(x^2-x)})]'
 &= \cos(e^{\cos(x^2-x)}) \cdot [e^{\cos(x^2-x)}]'\\
@@ -889,6 +903,7 @@ The answer can be viewed as a repeated peeling off of the outer function, a view
 &= \cos(e^{\cos(x^2-x)}) \cdot e^{\cos(x^2-x)} \cdot (-\sin(x^2-x)) \cdot [x^2-x]'\\
 &= \cos(e^{\cos(x^2-x)}) \cdot e^{\cos(x^2-x)} \cdot (-\sin(x^2-x)) \cdot (2x-1)\\
 \end{align*}
+$$
 
 
 ##### More examples of differentiation
@@ -1004,7 +1019,7 @@ Find the derivative of $f(x) = x \cdot e^{-x^2}$.
 
 
 Using the product rule and then the chain rule, we have:
-
+$$
 \begin{align*}
 f'(x) &= [x \cdot e^{-x^2}]'\\
 &= [x]' \cdot e^{-x^2} + x \cdot [e^{-x^2}]'\\
@@ -1012,6 +1027,7 @@ f'(x) &= [x \cdot e^{-x^2}]'\\
 &= e^{-x^2} + x \cdot e^{-x^2} \cdot (-2x)\\
 &= e^{-x^2} (1 - 2x^2).
 \end{align*}
+$$
 
 ---
 
@@ -1022,7 +1038,7 @@ Find the derivative of $f(x) = e^{-ax} \cdot \sin(x)$.
 Using the  product rule and then the chain rule, we have:
 
 
-
+$$
 \begin{align*}
 f'(x) &= [e^{-ax} \cdot \sin(x)]'\\
 &= [e^{-ax}]' \cdot \sin(x) + e^{-ax} \cdot [\sin(x)]'\\
@@ -1030,6 +1046,7 @@ f'(x) &= [e^{-ax} \cdot \sin(x)]'\\
 &= e^{-ax} \cdot (-a)   \cdot \sin(x) + e^{-ax} \cos(x)\\
 &= e^{-ax}(\cos(x) - a\sin(x)).
 \end{align*}
+$$
 
 
 ---
@@ -1164,13 +1181,14 @@ Find the first $3$ derivatives of $f(x) = ax^3 + bx^2 + cx + d$.
 
 
 Differentiating a polynomial is done with the sum rule, here we repeat three times:
-
+$$
 \begin{align*}
 f(x)    &= ax^3 + bx^2 + cx + d\\
 f'(x)   &= 3ax^2 + 2bx + c \\
 f''(x)  &= 3\cdot 2 a x + 2b \\
 f'''(x) &= 6a
 \end{align*}
+$$
 
 We can see, the fourth derivative – and all higher order ones – would be identically $0$. This is part of a general phenomenon: an $n$th degree polynomial has only $n$ non-zero derivatives.
 
@@ -1181,7 +1199,7 @@ We can see, the fourth derivative – and all higher order ones – would be ide
 Find the first $5$ derivatives of $\sin(x)$.
 
 
-
+$$
 \begin{align*}
 f(x)    &= \sin(x) \\
 f'(x)   &= \cos(x) \\
@@ -1190,6 +1208,7 @@ f'''(x) &= -\cos(x) \\
 f^{(4)} &= \sin(x) \\
 f^{(5)} &= \cos(x)
 \end{align*}
+$$
 
 
 We see the derivatives repeat themselves. (We also see alternative notation for higher order derivatives.)
@@ -1616,13 +1635,14 @@ The right graph is of $g(x) = \exp(x)$ at $x=1$, the left graph of $f(x) = \sin(
 Assuming the approximation gets better for $h$ close to $0$, as it visually does, the derivative at $1$ for $f(g(x))$ should be given by this limit:
 
 
-
+$$
 \begin{align*}
 \frac{d(f\circ g)}{dx}\mid_{x=1}
 &= \lim_{h\rightarrow 0} \frac{f(g(1) + g'(1)h)-f(g(1))}{h}\\
 &= \lim_{h\rightarrow 0} \frac{f(g(1) + g'(1)h)-f(g(1))}{g'(1)h} \cdot g'(1)\\
 &= \lim_{h\rightarrow 0} (f\circ g)'(g(1)) \cdot g'(1).
 \end{align*}
+$$
 
 
 What limit law, described below assuming all limits exist. allows the last equals sign?
