--- a/quarto/integrals/partial_fractions.qmd
+++ b/quarto/integrals/partial_fractions.qmd
@@ -28,13 +28,16 @@ Let $f(x) = p(x)/q(x)$, where  $p$ and $q$ are polynomial functions with real co
 
 The function $q(x)$ will factor over the real numbers. The fundamental theorem of algebra can be applied to say that $q(x)=q_1(x)^{n_1} \cdots q_k(x)^{n_k}$ where $q_i(x)$ is a linear or quadratic polynomial and $n_k$ a positive integer.
 
+::: {.callout-note icon=false}
+## Partial Fraction Decomposition
 
-> **Partial Fraction Decomposition**: There are unique polynomials $a_{ij}$ with degree $a_{ij} <$ degree $q_i$ such that
->
-> $$
-> \frac{p(x)}{q(x)} = a(x) + \sum_{i=1}^k \sum_{j=1}^{n_i} \frac{a_{ij}(x)}{q_i(x)^j}.
-> $$
+There are unique polynomials $a_{ij}$ with degree $a_{ij} <$ degree $q_i$ such that
 
+$$
+\frac{p(x)}{q(x)} = a(x) + \sum_{i=1}^k \sum_{j=1}^{n_i} \frac{a_{ij}(x)}{q_i(x)^j}.
+$$
+
+:::
 
 
 The method is attributed to John Bernoulli, one of the prolific Bernoulli brothers who put a stamp on several areas of math. This Bernoulli was a mentor to Euler.
@@ -109,7 +112,7 @@ What remains is to establish that we can take $A(x) = a(x)\cdot P(x)$ with a deg
 In Proposition 3.8 of [Bradley](http://www.m-hikari.com/imf/imf-2012/29-32-2012/cookIMF29-32-2012.pdf) and Cook we can see how. Recall the division algorithm, for example, says there are $q_k$ and $r_k$ with $A=q\cdot q_k + r_k$ where the degree of $r_k$ is less than that of $q$, which is linear or quadratic. This is repeatedly applied below:
 
 
-
+$$
 \begin{align*}
 \frac{A}{q^k} &= \frac{q\cdot q_k + r_k}{q^k}\\
 &= \frac{r_k}{q^k} + \frac{q_k}{q^{k-1}}\\
@@ -119,6 +122,7 @@ In Proposition 3.8 of [Bradley](http://www.m-hikari.com/imf/imf-2012/29-32-2012/
 &= \cdots\\
 &= \frac{r_k}{q^k} + \frac{r_{k-1}}{q^{k-1}} + \cdots + q_1.
 \end{align*}
+$$
 
 
 So the term $A(x)/q(x)^k$ can be expressed in terms of a sum where the numerators or each term have degree less than $q(x)$, as expected by the statement of the theorem.
@@ -208,13 +212,14 @@ integrate(B/((a*x)^2 - 1)^4, x)
 In [Bronstein](http://www-sop.inria.fr/cafe/Manuel.Bronstein/publications/issac98.pdf) this characterization can be found - "This method, which dates back to Newton, Leibniz and Bernoulli, should not be used in practice, yet it remains the method found in most calculus texts and is often taught. Its major drawback is the factorization of the denominator of the integrand over the real or complex numbers." We can also find the following formulas which formalize the above exploratory calculations ($j>1$ and $b^2 - 4c < 0$ below):
 
 
-
+$$
 \begin{align*}
 \int \frac{A}{(x-a)^j} &= \frac{A}{1-j}\frac{1}{(x-a)^{j-1}}\\
 \int \frac{A}{x-a}     &= A\log(x-a)\\
 \int \frac{Bx+C}{x^2 + bx + c}     &= \frac{B}{2} \log(x^2 + bx + c) + \frac{2C-bB}{\sqrt{4c-b^2}}\cdot \arctan\left(\frac{2x+b}{\sqrt{4c-b^2}}\right)\\
 \int \frac{Bx+C}{(x^2 + bx + c)^j} &= \frac{B' x + C'}{(x^2 + bx + c)^{j-1}} + \int \frac{C''}{(x^2 + bx + c)^{j-1}}
 \end{align*}
+$$
 
 
 The first returns a rational function; the second yields a logarithm term; the third yields a logarithm and an arctangent term; while the last, which has explicit constants available, provides a reduction that can be recursively applied;
@@ -288,7 +293,7 @@ The answers found can become quite involved. [Corless](https://arxiv.org/pdf/171
 ex = (x^2 - 1) / (x^4 + 5x^2 + 7)
 ```
 
-But the integral is something best suited to a computer algebra system:
+But the integral is something best suited for a computer algebra system:
 
 
 ```{julia}
@@ -482,11 +487,12 @@ How to see that these give rise to real answers on integration is the point of t
 Breaking the terms up over $a$ and $b$ we have:
 
 
-
+$$
 \begin{align*}
 I &= \frac{a}{x - (\alpha + i \beta)} + \frac{a}{x - (\alpha - i \beta)} \\
 II &= i\frac{b}{x - (\alpha + i \beta)} - i\frac{b}{x - (\alpha - i \beta)}
 \end{align*}
+$$
 
 
 Integrating $I$ leads to two logarithmic terms, which are combined to give:
