--- a/quarto/precalc/inversefunctions.qmd
+++ b/quarto/precalc/inversefunctions.qmd
@@ -40,10 +40,12 @@ plot(f, 0, 4, legend=false)
 plot!([2,2,0], [0,f(2),f(2)])
 ```
 
-The graph of a function is a representation of points $(x,f(x))$, so to *find* $f(c)$ from the graph, we begin on the $x$ axis at $c$, move vertically to the graph (the point $(c, f(c))$), and then move horizontally to the $y$ axis, intersecting it at $f(c)$. The figure shows this for $c=2$, from which we can read that $f(c)$ is about $4$. This is how an $x$ is associated to a single $y$.
+The graph of a function is a representation of points $(x,f(x))$, so to *find* $y = f(c)$ from the graph, we begin on the $x$ axis at $c$, move vertically to the graph (the point $(c, f(c))$), and then move horizontally to the $y$ axis, intersecting it at $y = f(c)$. The figure shows this for $c=2$, from which we can read that $f(c)$ is about $4$. This is how an $x$ is associated to a single $y$.
 
 
-If we were to *reverse* the direction, starting at $f(c)$ on the $y$ axis and then moving horizontally to the graph, and then vertically to the $x$-axis we end up at a value $c$ with the correct $f(c)$. This operation will form a function **if** the initial movement horizontally is guaranteed to find *no more than one* value on the graph. That is, to have an inverse function, there can not be two $x$ values corresponding to a given $y$ value. This observation is often visualized through the "horizontal line test" - the graph of a function with an inverse function can only intersect a horizontal line at most in one place.
+If we were to *reverse* the direction, starting at $y = f(c)$ on the $y$ axis and then moving horizontally to the graph, and then vertically to the $x$-axis we end up at a value $c$ with the correct $f(c)$. This allows solving for $x$ knowing $y$ in $y=f(x)$.
+
+The operation described will form a function **if** the initial movement horizontally is guaranteed to find *no more than one* value on the graph. That is, to have an inverse function, there can not be two $x$ values corresponding to a given $y$ value. This observation is often visualized through the "horizontal line test" - the graph of a function with an inverse function can only intersect a horizontal line at most in one place.
 
 
 More formally, a function is called *one-to-one* *if* for any two $a \neq b$, it must be that $f(a) \neq f(b)$. Many functions are one-to-one, many are not. Familiar one-to-one functions are linear functions ($f(x)=a \cdot x + b$ with $a\neq 0$), odd powers of $x$ ($f(x)=x^{2k+1}$), and functions of the form $f(x)=x^{1/n}$ for $x \geq 0$. In contrast, all *even* functions are *not* one-to-one, as $f(x) = f(-x)$ for any nonzero $x$ in the domain of $f$.
@@ -70,13 +72,13 @@ However, typically we have a rule describing our function. What is the process t
 When we solve algebraically for $x$ in $y=9/5 \cdot x + 32$ we do the same thing as we do verbally: we subtract $32$ from each side, and then divide by $9/5$ to isolate $x$:
 
 
-
+$$
 \begin{align*}
 y &= 9/5 \cdot x + 32\\
 y - 32 &= 9/5 \cdot x\\
 (y-32) / (9/5) &= x.
 \end{align*}
-
+$$
 
 From this, we have the function $g(y) = (y-32) / (9/5)$ is the inverse function of $f(x) =  9/5\cdot x + 32$.
 
@@ -102,7 +104,7 @@ Suppose a transformation of $x$ is given by $y = f(x) = (ax + b)/(cx+d)$. This f
 From the expression $y=f(x)$ we *algebraically* solve for $x$:
 
 
-
+$$
 \begin{align*}
 y &= \frac{ax +b}{cx+d}\\
 y \cdot (cx + d) &= ax + b\\
@@ -110,7 +112,7 @@ ycx - ax &= b - yd\\
 (cy-a) \cdot x &= b - dy\\
 x &= -\frac{dy - b}{cy-a}.
 \end{align*}
-
+$$
 
 We see that to solve for $x$ we need to divide by $cy-a$, so this expression can not be zero. So, using $x$ as the dummy variable, we have
 
@@ -128,14 +130,14 @@ The function $f(x) = (x-1)^5 + 2$ is strictly increasing and so will have an inv
 Again, we solve algebraically starting with $y=(x-1)^5 + 2$ and solving for $x$:
 
 
-
+$$
 \begin{align*}
 y &= (x-1)^5 + 2\\
 y - 2 &= (x-1)^5\\
 (y-2)^{1/5} &= x - 1\\
 (y-2)^{1/5} + 1 &= x.
 \end{align*}
-
+$$
 
 We see that $f^{-1}(x) = 1 + (x - 2)^{1/5}$. The fact that the power $5$ is an odd power is important, as this ensures a unique (real) solution to the fifth root of a value, in the above $y-2$.
 
@@ -171,14 +173,14 @@ The [inverse function theorem](https://en.wikipedia.org/wiki/Inverse_function_th
 Consider the function $f(x) = (1+x^2)^{-1}$. This bell-shaped function is even (symmetric about $0$), so can not possibly be one-to-one. However, if the domain is restricted to $[0,\infty)$ it is. The restricted function is strictly decreasing and its inverse is found, as follows:
 
 
-
+$$
 \begin{align*}
 y &= \frac{1}{1 + x^2}\\
 1+x^2 &= \frac{1}{y}\\
 x^2 &= \frac{1}{y} - 1\\
 x &= \sqrt{(1-y)/y}, \quad 0 < y \leq 1.
 \end{align*}
-
+$$
 
 Then $f^{-1}(x) = \sqrt{(1-x)/x}$ where $0 < x \leq 1$. The somewhat complicated restriction for the the domain coincides with the range of $f(x)$. We shall see next that this is no coincidence.
 
@@ -268,9 +270,9 @@ We drew a line connecting $(1/2, f(1/2))$ to $(f(1/2),1/2)$. We can see that it 
 
 One consequence of this symmetry, is that if $f$ is strictly increasing, then so is its inverse.
 
-
-!!!note 	In the above we used `cbrt(x)` and not `x^(1/3)`. The latter usage assumes that $x \geq 0$ as it isn't guaranteed that for all real exponents the answer will be a real number. The `cbrt` function knows there will always be a real answer and provides it.
-
+::: {.callout-note}
+In the above we used `cbrt(x)` and not `x^(1/3)`. The latter usage assumes that $x \geq 0$ as it isn't guaranteed that for all real exponents the answer will be a real number. The `cbrt` function knows there will always be a real answer and provides it.
+:::
 
 ### Lines
 
